@@ -1,10 +1,10 @@
 package uk.gov.hmcts.reform.civil.controllers;
 
-import com.google.common.collect.ImmutableMap;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.slf4j.MDC;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -15,12 +15,14 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
+import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.civil.callback.CallbackHandlerFactory;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CallbackType;
 import uk.gov.hmcts.reform.civil.callback.CallbackVersion;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 
+import java.util.Objects;
 import java.util.Optional;
 import javax.validation.constraints.NotNull;
 
@@ -52,17 +54,21 @@ public class CallbackController {
         @PathVariable("version") Optional<CallbackVersion> version,
         @PathVariable("page-id") Optional<String> pageId
     ) {
+        final CaseDetails caseDetails = callback.getCaseDetails();
+        final CaseDetails caseDetailsBefore = callback.getCaseDetailsBefore();
+        MDC.put("caseId", Objects.toString(caseDetails.getId(), ""));
         log.info("Received callback from CCD, eventId: {}, callback type: {}, page id: {}, version: {}",
-                 callback.getEventId(), callbackType, pageId, version
+            callback.getEventId(), callbackType, pageId, version
         );
 
         CallbackParams callbackParams = CallbackParams.builder()
             .request(callback)
             .type(CallbackType.fromValue(callbackType))
-            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, authorisation))
+            .params(java.util.Map.of(CallbackParams.Params.BEARER_TOKEN, authorisation))
             .version(version.orElse(null))
             .pageId(pageId.orElse(null))
-            .caseData(caseDetailsConverter.toCaseData(callback.getCaseDetails()))
+            .caseData(caseDetailsConverter.toCaseData(caseDetails))
+            .caseDataBefore(caseDetailsBefore != null ? caseDetailsConverter.toCaseData(caseDetailsBefore) : null)
             .build();
 
         return callbackHandlerFactory.dispatch(callbackParams);
