@@ -1,15 +1,5 @@
 package uk.gov.hmcts.reform.civil.handler.callback.user;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableMap;
 import lombok.RequiredArgsConstructor;
@@ -21,20 +11,29 @@ import uk.gov.hmcts.reform.civil.callback.Callback;
 import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
-import uk.gov.hmcts.reform.civil.enums.AllocatedTrack;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
+import uk.gov.hmcts.reform.civil.enums.hearing.HearingNoticeList;
 import uk.gov.hmcts.reform.civil.enums.hearing.ListingOrRelisting;
 import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
+import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.Time;
-import uk.gov.hmcts.reform.civil.referencedata.LocationRefDataService;
 import uk.gov.hmcts.reform.civil.service.hearings.HearingFeesService;
+import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
 import uk.gov.hmcts.reform.civil.utils.HearingReferenceNumber;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+
 import static java.lang.String.format;
-import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_START;
@@ -42,6 +41,12 @@ import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.HEARING_SCHEDULED;
+import static uk.gov.hmcts.reform.civil.enums.AllocatedTrack.INTERMEDIATE_CLAIM;
+import static uk.gov.hmcts.reform.civil.enums.AllocatedTrack.MULTI_CLAIM;
+import static uk.gov.hmcts.reform.civil.enums.CaseCategory.SPEC_CLAIM;
+import static uk.gov.hmcts.reform.civil.enums.CaseCategory.UNSPEC_CLAIM;
+import static uk.gov.hmcts.reform.civil.enums.CaseState.CASE_PROGRESSION;
+import static uk.gov.hmcts.reform.civil.enums.CaseState.DECISION_OUTCOME;
 import static uk.gov.hmcts.reform.civil.enums.CaseState.HEARING_READINESS;
 import static uk.gov.hmcts.reform.civil.enums.CaseState.PREPARE_FOR_HEARING_CONDUCT_HEARING;
 import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
@@ -56,17 +61,17 @@ public class HearingScheduledHandler extends CallbackHandler {
         + ", for example, book an interpreter.";
     public static final String HEARING_CREATED_HEADER = "# Hearing notice created\n"
         + "# Your reference number\n" + "# %s";
-
     private static final List<CaseEvent> EVENTS = Collections.singletonList(HEARING_SCHEDULED);
-    private final LocationRefDataService locationRefDataService;
+    private final LocationReferenceDataService locationRefDataService;
     private final ObjectMapper objectMapper;
     private final Time time;
     private final HearingFeesService hearingFeesService;
+    private final FeatureToggleService  featureToggleService;
 
     @Override
     protected Map<String, Callback> callbacks() {
         return new ImmutableMap.Builder<String, Callback>()
-            .put(callbackKey(ABOUT_TO_START), this::emptyCallbackResponse)
+            .put(callbackKey(ABOUT_TO_START), this::clearPreviousSelections)
             .put(callbackKey(MID, "locationName"), this::locationList)
             .put(callbackKey(MID, "checkPastDate"), this::checkPastDate)
             .put(callbackKey(MID, "checkFutureDate"), this::checkFutureDate)
@@ -83,6 +88,28 @@ public class HearingScheduledHandler extends CallbackHandler {
         return format(HEARING_CREATED_HEADER, caseData.getHearingReferenceNumber());
     }
 
+    // hearing notices can be retriggered i.e. relisted, in such case we clear previous selections
+    private CallbackResponse clearPreviousSelections(CallbackParams callbackParams) {
+        var caseData = callbackParams.getCaseData();
+        CaseData.CaseDataBuilder<?, ?> caseDataBuilder = caseData.toBuilder();
+
+        caseDataBuilder
+            .hearingNoticeList(null)
+            .listingOrRelisting(null)
+            .hearingLocation(null)
+            .channel(null)
+            .hearingDate(null)
+            .hearingTimeHourMinute(null)
+            .hearingDuration(null)
+            .hearingDurationMinti(null)
+            .information(null)
+            .hearingNoticeListOther(null);
+
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .data(caseDataBuilder.build().toMap(objectMapper))
+            .build();
+    }
+
     private SubmittedCallbackResponse buildConfirmation(CallbackParams callbackParams) {
         var caseData = callbackParams.getCaseData();
         return SubmittedCallbackResponse.builder()
@@ -97,7 +124,7 @@ public class HearingScheduledHandler extends CallbackHandler {
         String authToken = callbackParams.getParams().get(BEARER_TOKEN).toString();
 
         List<LocationRefData> locations = (locationRefDataService
-            .getCourtLocationsForDefaultJudgments(authToken));
+            .getHearingCourtLocations(authToken));
         caseDataBuilder.hearingLocation(getLocationsFromList(locations))
             .build();
 
@@ -110,7 +137,8 @@ public class HearingScheduledHandler extends CallbackHandler {
         return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
                 .append(" - ").append(location.getCourtAddress())
                 .append(" - ").append(location.getPostcode()).toString())
-                            .collect(Collectors.toList()));
+                            .sorted()
+                            .toList());
     }
 
     private CallbackResponse checkPastDate(CallbackParams callbackParams) {
@@ -161,26 +189,80 @@ public class HearingScheduledHandler extends CallbackHandler {
             locationList.setListItems(null);
             caseDataBuilder.hearingLocation(locationList);
         }
-        CaseState caseState = HEARING_READINESS;
 
-        var allocatedTrack = caseData.getAllocatedTrack();
-        if (isNull(caseData.getAllocatedTrack())) {
-            allocatedTrack = AllocatedTrack.getAllocatedTrack(caseData.getTotalClaimAmount(), null);
-            caseDataBuilder.allocatedTrack(allocatedTrack);
+        // Hearing fee will be different based on claim track.
+        // for either spec claims (ResponseClaimTrack) or unspec claims (AllocatedTrack)
+        String claimTrack = null;
+        if (caseData.getCaseAccessCategory().equals(UNSPEC_CLAIM)) {
+            claimTrack = caseData.getAllocatedTrack().name();
+        } else if (caseData.getCaseAccessCategory().equals(SPEC_CLAIM)) {
+            claimTrack = caseData.getResponseClaimTrack();
         }
 
-        if (ListingOrRelisting.LISTING.equals(caseData.getListingOrRelisting())) {
-            caseDataBuilder.hearingDueDate(
-                calculateHearingDueDate(time.now().toLocalDate(), caseData.getHearingDate()));
-            caseDataBuilder.hearingFee(calculateAndApplyFee(hearingFeesService, caseData, allocatedTrack));
+        CaseState caseState = caseDataBuilder.build().getCcdState();
+        if (featureToggleService.isMultiOrIntermediateTrackEnabled(caseData)) {
+            caseState = determinePostState(caseState, caseData);
+            calculateHearingFeeAndDueDate(caseDataBuilder, caseData, claimTrack);
         } else {
-            caseState = PREPARE_FOR_HEARING_CONDUCT_HEARING;
+            // If hearing notice type if FAST or SMALL and it is a first time being listed, calculate fee and fee due date.
+            // If relisted, do not recalculate fee and fee due date, and move state to PREPARE_FOR_HEARING_CONDUCT_HEARING
+            if (!caseData.getHearingNoticeList().equals(HearingNoticeList.OTHER)) {
+                if (ListingOrRelisting.LISTING.equals(caseData.getListingOrRelisting())) {
+                    calculateHearingFeeAndDueDate(caseDataBuilder, caseData, claimTrack);
+                    caseState = caseState.equals(CASE_PROGRESSION) ? HEARING_READINESS : caseState;
+                } else {
+                    caseState = caseState.equals(CASE_PROGRESSION) ? PREPARE_FOR_HEARING_CONDUCT_HEARING : caseState;
+                }
+                // If hearing notice type is OTHER and is being listed, do not calculate fee and fee due date
+                // If relisted, again do not calculate fee and fee due date, but move state to PREPARE_FOR_HEARING_CONDUCT_HEARING
+            } else if (caseData.getHearingNoticeList().equals(HearingNoticeList.OTHER)) {
+                caseState = caseState.equals(CASE_PROGRESSION) ? PREPARE_FOR_HEARING_CONDUCT_HEARING : caseState;
+            }
         }
+
         caseDataBuilder.businessProcess(BusinessProcess.ready(HEARING_SCHEDULED));
+        caseDataBuilder.trialReadyNotified(null);
         return AboutToStartOrSubmitCallbackResponse.builder()
             .state(caseState.name())
             .data(caseDataBuilder.build().toMap(objectMapper))
             .build();
+    }
+
+    private CaseState determinePostState(CaseState caseState, CaseData caseData) {
+        if (isClaimMultiOrIntermediate(caseData)) {
+            if (!caseState.equals(PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                && !caseState.equals(HEARING_READINESS)) {
+                caseState = HEARING_READINESS;
+            }
+        } else {
+            if (!caseState.equals(PREPARE_FOR_HEARING_CONDUCT_HEARING)
+                && !caseState.equals(HEARING_READINESS)
+                && !caseState.equals(DECISION_OUTCOME)) {
+                caseState = HEARING_READINESS;
+            }
+        }
+        return caseState;
+    }
+
+    private Boolean isClaimMultiOrIntermediate(CaseData caseData) {
+        if (caseData.getCaseAccessCategory().equals(UNSPEC_CLAIM)) {
+            return caseData.getAllocatedTrack().equals(INTERMEDIATE_CLAIM) || caseData.getAllocatedTrack().equals(MULTI_CLAIM);
+        } else {
+            return caseData.getResponseClaimTrack().equals("INTERMEDIATE_CLAIM") || caseData.getResponseClaimTrack().equals("MULTI_CLAIM");
+        }
+    }
+
+    private void calculateHearingFeeAndDueDate(CaseData.CaseDataBuilder<?, ?> caseDataBuilder, CaseData caseData, String claimTrack) {
+        if (caseData.getHearingNoticeList().equals(HearingNoticeList.OTHER)) {
+            return;
+        }
+        if (featureToggleService.isMultiOrIntermediateTrackEnabled(caseData)
+            && ListingOrRelisting.RELISTING.equals(caseData.getListingOrRelisting())) {
+            caseDataBuilder.hearingDueDate(calculateHearingDueDate(time.now().toLocalDate(), caseData.getHearingDate()));
+            return;
+        }
+        caseDataBuilder.hearingDueDate(calculateHearingDueDate(time.now().toLocalDate(), caseData.getHearingDate()));
+        caseDataBuilder.hearingFee(calculateAndApplyFee(hearingFeesService, caseData, claimTrack));
     }
 
     private List<String> checkTrueOrElseAddError(boolean condition, String error) {
