@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.civil.handler.callback.user;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
@@ -10,9 +11,8 @@ import uk.gov.hmcts.reform.civil.callback.Callback;
 import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
+import uk.gov.hmcts.reform.civil.documentmanagement.model.Document;
 import uk.gov.hmcts.reform.civil.enums.MultiPartyScenario;
-import uk.gov.hmcts.reform.civil.model.common.Element;
-import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.CertificateOfService;
@@ -20,23 +20,25 @@ import uk.gov.hmcts.reform.civil.model.DocumentWithRegex;
 import uk.gov.hmcts.reform.civil.model.ServedDocumentFiles;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
-import uk.gov.hmcts.reform.civil.documentmanagement.model.Document;
+import uk.gov.hmcts.reform.civil.model.common.Element;
 import uk.gov.hmcts.reform.civil.service.DeadlinesCalculator;
 import uk.gov.hmcts.reform.civil.service.ExitSurveyContentService;
+import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.Time;
 import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 import uk.gov.hmcts.reform.civil.utils.ElementUtils;
+import uk.gov.hmcts.reform.civil.utils.ServiceOfDateValidationMessageUtils;
 import uk.gov.hmcts.reform.civil.validation.interfaces.ParticularsOfClaimValidator;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.util.Objects.nonNull;
@@ -52,6 +54,7 @@ import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.helpers.DateFormatHelper.DATE_TIME_AT;
 import static uk.gov.hmcts.reform.civil.helpers.DateFormatHelper.formatLocalDateTime;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implements ParticularsOfClaimValidator {
@@ -80,22 +83,19 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
     public static final String WARNING_ONLY_NOTIFY_ONE_DEFENDANT_SOLICITOR =
             "Your claim will progress offline if you only notify one Defendant of the claim details.";
 
-    public static final String DOC_SERVED_DATE_IN_FUTURE =
-            "Date you served the documents must be today or in the past";
-
-    public static final String DOC_SERVED_DATE_OLDER_THAN_14DAYS =
-        "Date of Service should not be more than 14 days old";
-
     public static final String DOC_SERVED_MANDATORY =
             "Supporting evidence is required";
 
     public static final String BOTH_CERTIFICATE_SERVED_SAME_DATE =
-        "Date of Service for both certificate must be the same";
+        "The date of service for defendant 1 and defendant 2 must be the same";
+
+    public static final LocalTime END_OF_BUSINESS_DAY = LocalTime.of(16, 0, 0);
 
     private final ExitSurveyContentService exitSurveyContentService;
     private final ObjectMapper objectMapper;
     private final Time time;
     private final DeadlinesCalculator deadlinesCalculator;
+    private final ServiceOfDateValidationMessageUtils serviceOfDateValidationMessageUtils;
     private final FeatureToggleService featureToggleService;
     private final AssignCategoryId assignCategoryId;
 
@@ -120,28 +120,28 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
     private CallbackResponse submitClaim(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
         LocalDateTime notificationDateTime = time.now();
-        LocalDateTime currentDateTime = notificationDateTime;
-        LocalDate notificationDate = notificationDateTime.toLocalDate();
+        final LocalDateTime currentDateTime = notificationDateTime;
         MultiPartyScenario multiPartyScenario = getMultiPartyScenario(caseData);
 
-        if (featureToggleService.isCertificateOfServiceEnabled()) {
-            caseData = saveCoSDetailsDoc(caseData, 1);
-            caseData = saveCoSDetailsDoc(caseData, 2);
+        caseData = saveCoSDetailsDoc(caseData, 1);
+        caseData = saveCoSDetailsDoc(caseData, 2);
 
-            if (multiPartyScenario == ONE_V_TWO_TWO_LEGAL_REP && isConfirmationForLip(caseData)) {
-                multiPartyScenario = null;
-            }
+        if (multiPartyScenario == ONE_V_TWO_TWO_LEGAL_REP && isConfirmationForLip(caseData)) {
+            multiPartyScenario = null;
         }
         CaseData updatedCaseData;
+        LocalDate notificationDate = notificationDateTime.toLocalDate();
 
         //Set R1 and R2 response deadlines, as both are represented
         if (multiPartyScenario == ONE_V_TWO_TWO_LEGAL_REP) {
             updatedCaseData = caseData.toBuilder()
                     .businessProcess(BusinessProcess.ready(NOTIFY_DEFENDANT_OF_CLAIM_DETAILS))
                     .claimDetailsNotificationDate(currentDateTime)
-                    .respondent1ResponseDeadline(deadlinesCalculator.plus14DaysAt4pmDeadline(notificationDateTime))
-                    .respondent2ResponseDeadline(deadlinesCalculator.plus14DaysAt4pmDeadline(notificationDateTime))
-                    .nextDeadline(deadlinesCalculator.plus14DaysAt4pmDeadline(notificationDateTime).toLocalDate())
+                    .addLegalRepDeadlineRes1(deadlinesCalculator.plus14DaysDeadline(notificationDateTime))
+                    .addLegalRepDeadlineRes2(deadlinesCalculator.plus14DaysDeadline(notificationDateTime))
+                    .respondent1ResponseDeadline(deadlinesCalculator.plus14DaysDeadline(notificationDateTime))
+                    .respondent2ResponseDeadline(deadlinesCalculator.plus14DaysDeadline(notificationDateTime))
+                    .nextDeadline(deadlinesCalculator.plus14DaysDeadline(notificationDateTime).toLocalDate())
                     .claimDismissedDeadline(deadlinesCalculator.addMonthsToDateToNextWorkingDayAtMidnight(
                             6,
                             notificationDate
@@ -156,7 +156,7 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
             CaseData.CaseDataBuilder builder = caseData.toBuilder()
                     .businessProcess(BusinessProcess.ready(NOTIFY_DEFENDANT_OF_CLAIM_DETAILS))
                     .claimDetailsNotificationDate(currentDateTime)
-                    .nextDeadline(deadlinesCalculator.plus14DaysAt4pmDeadline(notificationDateTime).toLocalDate())
+                    .nextDeadline(deadlinesCalculator.plus14DaysDeadline(notificationDateTime).toLocalDate())
                     .claimDismissedDeadline(deadlinesCalculator.addMonthsToDateToNextWorkingDayAtMidnight(
                             6,
                             notificationDate
@@ -164,14 +164,27 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
 
             if (Objects.nonNull(caseData.getRespondent1())) {
                 builder.respondent1ResponseDeadline(
-                        deadlinesCalculator.plus14DaysAt4pmDeadline(notificationDateTime));
+                        deadlinesCalculator.plus14DaysDeadline(notificationDateTime));
             }
+
+            if (Objects.nonNull(caseData.getRespondent1())
+                && NO.equals(caseData.getRespondent1Represented())) {
+                builder.addLegalRepDeadlineRes1(deadlinesCalculator.plus14DaysDeadline(notificationDateTime));
+            }
+
             if (Objects.nonNull(caseData.getRespondent2())
                 && YES.equals(caseData.getAddRespondent2())) {
                 builder.respondent2ResponseDeadline(
-                        deadlinesCalculator.plus14DaysAt4pmDeadline(notificationDateTime));
+                        deadlinesCalculator.plus14DaysDeadline(notificationDateTime));
             }
-            if (featureToggleService.isCertificateOfServiceEnabled() && areAnyRespondentsLitigantInPerson(caseData)) {
+
+            if (Objects.nonNull(caseData.getRespondent2())
+                   && YES.equals(caseData.getAddRespondent2())
+                && NO.equals(caseData.getRespondent2Represented())) {
+                builder.addLegalRepDeadlineRes2(deadlinesCalculator.plus14DaysDeadline(notificationDateTime));
+            }
+
+            if (areAnyRespondentsLitigantInPerson(caseData))  {
                 if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())) {
                     builder
                         .cosNotifyClaimDetails1(updateStatementOfTruthForLip(caseData.getCosNotifyClaimDetails1()))
@@ -195,26 +208,31 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
 
     private LocalDateTime getEarliestDateOfService(CaseData caseData) {
         LocalDateTime date = time.now();
+        LocalDateTime deemedDate1 = null;
+        LocalDateTime deemedDate2 = null;
 
-        if (featureToggleService.isCertificateOfServiceEnabled()) {
-            if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())
-                && Objects.nonNull(caseData.getCosNotifyClaimDetails1().getCosDateOfServiceForDefendant())) {
-                LocalDateTime cosDate1 = caseData.getCosNotifyClaimDetails1()
-                        .getCosDateOfServiceForDefendant().atTime(time.now().toLocalTime());
-                if (cosDate1.isBefore(date)) {
-                    date = cosDate1;
-                }
-            }
-            if (Objects.nonNull(caseData.getCosNotifyClaimDetails2())
-                && Objects.nonNull(caseData.getCosNotifyClaimDetails2().getCosDateOfServiceForDefendant())) {
-                LocalDateTime cosDate2 = caseData.getCosNotifyClaimDetails2()
-                        .getCosDateOfServiceForDefendant().atTime(time.now().toLocalTime());
-                if (cosDate2.isBefore(date)) {
-                    date = cosDate2;
-                }
-            }
+        if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())
+            && Objects.nonNull(caseData.getCosNotifyClaimDetails1().getCosDateDeemedServedForDefendant())) {
+            deemedDate1 = caseData.getCosNotifyClaimDetails1()
+                .getCosDateDeemedServedForDefendant().atTime(time.now().toLocalTime());
         }
-        return date;
+
+        if (Objects.nonNull(caseData.getCosNotifyClaimDetails2())
+            && Objects.nonNull(caseData.getCosNotifyClaimDetails2().getCosDateDeemedServedForDefendant())) {
+            deemedDate2 = caseData.getCosNotifyClaimDetails2()
+                .getCosDateDeemedServedForDefendant().atTime(time.now().toLocalTime());
+        }
+
+        if (deemedDate1 != null && deemedDate2 != null) {
+            return deemedDate1.isBefore(deemedDate2) ? deemedDate1 : deemedDate2;
+        } else if (deemedDate1 != null) {
+            return deemedDate1;
+        } else if (deemedDate2 != null) {
+            return deemedDate2;
+        } else {
+            // If both deemedDate1 and deemedDate2 are null, use the current date and time
+            return date;
+        }
     }
 
     private CaseData saveCoSDetailsDoc(CaseData caseData, int lipNumber) {
@@ -239,7 +257,7 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
             caseData.getServedDocumentFiles().getOther()
                     .addAll(cosDoc.stream()
                             .map(document -> ElementUtils.element(new DocumentWithRegex(document)))
-                            .collect(Collectors.toList()));
+                            .toList());
         }
         return caseData;
     }
@@ -273,23 +291,15 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
                 || caseData.getDefendantSolicitorNotifyClaimDetailsOptions() == null
                 ? CONFIRMATION_SUMMARY
                 : NOTIFICATION_ONE_PARTY_SUMMARY;
-        if (featureToggleService.isCertificateOfServiceEnabled()) {
-            return isConfirmationForLip(caseData)
-                    ? CONFIRMATION_COS_SUMMARY
-                    : confirmationTextLR;
-        } else {
-            return confirmationTextLR;
-        }
+        return isConfirmationForLip(caseData)
+                ? CONFIRMATION_COS_SUMMARY
+                : confirmationTextLR;
     }
 
     private String getConfirmationHeader(CaseData caseData) {
-        if (featureToggleService.isCertificateOfServiceEnabled()) {
-            return isConfirmationForLip(caseData)
-                    ? CONFIRMATION_COS_HEADER
-                    : CONFIRMATION_HEADER;
-        } else {
-            return CONFIRMATION_HEADER;
-        }
+        return isConfirmationForLip(caseData)
+                ? CONFIRMATION_COS_HEADER
+                : CONFIRMATION_HEADER;
     }
 
     private boolean isConfirmationForLip(CaseData caseData) {
@@ -362,23 +372,19 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
         CaseData caseData = callbackParams.getCaseData();
 
         ArrayList<String> errors = new ArrayList<>();
-        CertificateOfService certificateOfService = caseData.getCosNotifyClaimDetails1();
-        if (featureToggleService.isCertificateOfServiceEnabled()) {
-            if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())) {
-                caseData.getCosNotifyClaimDetails1().setCosDocSaved(NO);
-            }
-
-            final String dateValidationErrorMessage = getServiceOfDateValidationMessage(
-                caseData.getCosNotifyClaimDetails1());
-
-            if (!dateValidationErrorMessage.isEmpty()) {
-                errors.add(dateValidationErrorMessage);
-            }
-            if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())
-                    && isMandatoryDocMissing(caseData.getCosNotifyClaimDetails1())) {
-                errors.add(DOC_SERVED_MANDATORY);
-            }
+        if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())) {
+            caseData.getCosNotifyClaimDetails1().setCosDocSaved(NO);
         }
+
+        List<String> dateValidationErrorMessages = serviceOfDateValidationMessageUtils
+            .getServiceOfDateValidationMessages(caseData.getCosNotifyClaimDetails1());
+        errors.addAll(dateValidationErrorMessages);
+
+        if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())
+                && isMandatoryDocMissing(caseData.getCosNotifyClaimDetails1())) {
+            errors.add(DOC_SERVED_MANDATORY);
+        }
+        CertificateOfService certificateOfService = caseData.getCosNotifyClaimDetails1();
         CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
         caseDataBuilder.cosNotifyClaimDetails1(certificateOfService.toBuilder()
                                                    .build());
@@ -391,28 +397,22 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
 
     private CallbackResponse validateCoSDetailsDefendant2(final CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
-        CertificateOfService certificateOfServiceDef2 = caseData.getCosNotifyClaimDetails2();
         ArrayList<String> errors = new ArrayList<>();
-        if (featureToggleService.isCertificateOfServiceEnabled()) {
-            if (Objects.nonNull(caseData.getCosNotifyClaimDetails2())) {
-                caseData.getCosNotifyClaimDetails2().setCosDocSaved(NO);
-            }
-            final String dateValidationErrorMessage = getServiceOfDateValidationMessage(
-                caseData.getCosNotifyClaimDetails2());
-
-            if (!dateValidationErrorMessage.isEmpty()) {
-                errors.add(dateValidationErrorMessage);
-            }
-
-            if (isBothDefendantLip(caseData) && !isBothDefendantWithSameDateOfService(caseData)) {
-                errors.add(BOTH_CERTIFICATE_SERVED_SAME_DATE);
-            }
-
-            if (Objects.nonNull(caseData.getCosNotifyClaimDetails2())
-                && isMandatoryDocMissing(caseData.getCosNotifyClaimDetails2())) {
-                errors.add(DOC_SERVED_MANDATORY);
-            }
+        if (Objects.nonNull(caseData.getCosNotifyClaimDetails2())) {
+            caseData.getCosNotifyClaimDetails2().setCosDocSaved(NO);
         }
+        List<String> dateValidationErrorMessages = serviceOfDateValidationMessageUtils.getServiceOfDateValidationMessages(caseData.getCosNotifyClaimDetails2());
+        errors.addAll(dateValidationErrorMessages);
+
+        if (isBothDefendantLip(caseData) && !isBothDefendantWithSameDateOfService(caseData)) {
+            errors.add(BOTH_CERTIFICATE_SERVED_SAME_DATE);
+        }
+
+        if (Objects.nonNull(caseData.getCosNotifyClaimDetails2())
+            && isMandatoryDocMissing(caseData.getCosNotifyClaimDetails2())) {
+            errors.add(DOC_SERVED_MANDATORY);
+        }
+        CertificateOfService certificateOfServiceDef2 = caseData.getCosNotifyClaimDetails2();
         CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
         caseDataBuilder.cosNotifyClaimDetails2(certificateOfServiceDef2.toBuilder()
                                                    .build());
@@ -427,28 +427,6 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
         return Objects.isNull(certificateOfService.getCosEvidenceDocument());
     }
 
-    private String getServiceOfDateValidationMessage(CertificateOfService certificateOfService) {
-        final String errorMessage = "";
-        if (Objects.nonNull(certificateOfService)) {
-            if (isCosDefendantNotifyDateFutureDate(certificateOfService.getCosDateOfServiceForDefendant())) {
-                return DOC_SERVED_DATE_IN_FUTURE;
-            } else if (isCosDefendantNotifyDateOlderThan14Days(certificateOfService.getCosDateOfServiceForDefendant())) {
-                return DOC_SERVED_DATE_OLDER_THAN_14DAYS;
-            }
-        }
-        return errorMessage;
-    }
-
-    private boolean isCosDefendantNotifyDateFutureDate(LocalDate cosDateOfServiceForDefendant) {
-        return time.now().toLocalDate().isBefore(cosDateOfServiceForDefendant);
-    }
-
-    private boolean isCosDefendantNotifyDateOlderThan14Days(LocalDate cosDateOfServiceForDefendant) {
-        return time.now().isAfter(deadlinesCalculator.plus14DaysAt4pmDeadline(cosDateOfServiceForDefendant
-                                                                                  .atTime(time.now().toLocalTime())));
-
-    }
-
     private boolean isBothDefendantLip(CaseData caseData) {
         return (caseData.getDefendant1LIPAtClaimIssued() != null
             && caseData.getDefendant1LIPAtClaimIssued() == YES)
@@ -459,10 +437,8 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
     private boolean isBothDefendantWithSameDateOfService(CaseData caseData) {
         if (Objects.nonNull(caseData.getCosNotifyClaimDetails1())
             && Objects.nonNull(caseData.getCosNotifyClaimDetails2())) {
-            if (caseData.getCosNotifyClaimDetails1().getCosDateOfServiceForDefendant()
-                .equals(caseData.getCosNotifyClaimDetails2().getCosDateOfServiceForDefendant())) {
-                return true;
-            }
+            return caseData.getCosNotifyClaimDetails1().getCosDateDeemedServedForDefendant()
+                .equals(caseData.getCosNotifyClaimDetails2().getCosDateDeemedServedForDefendant());
         }
         return false;
     }
@@ -477,20 +453,31 @@ public class NotifyClaimDetailsCallbackHandler extends CallbackHandler implement
 
     private boolean areAnyRespondentsLitigantInPerson(CaseData caseData) {
         return caseData.getRespondent1Represented() == NO
-            || (YES.equals(caseData.getAddRespondent2()) ? (caseData.getRespondent2Represented() == NO) : false);
+            || (YES.equals(caseData.getAddRespondent2()) && (caseData.getRespondent2Represented() == NO));
     }
+
+    static final String PARTICULARS_OF_CLAIM = "particularsOfClaim";
 
     private void assignNotifyParticularOfClaimCategoryIds(CaseData caseData) {
         assignCategoryId.assignCategoryIdToCollection(caseData.getServedDocumentFiles().getParticularsOfClaimDocument(),
-                                                      Element::getValue, "particularsOfClaim");
+                                                      Element::getValue, PARTICULARS_OF_CLAIM
+        );
         assignCategoryId.assignCategoryIdToCollection(caseData.getServedDocumentFiles().getMedicalReport(),
-                                                      document -> document.getValue().getDocument(), "particularsOfClaim");
+                                                      document -> document.getValue().getDocument(),
+                                                      PARTICULARS_OF_CLAIM
+        );
         assignCategoryId.assignCategoryIdToCollection(caseData.getServedDocumentFiles().getScheduleOfLoss(),
-                                                      document -> document.getValue().getDocument(), "particularsOfClaim");
+                                                      document -> document.getValue().getDocument(),
+                                                      PARTICULARS_OF_CLAIM
+        );
         assignCategoryId.assignCategoryIdToCollection(caseData.getServedDocumentFiles().getCertificateOfSuitability(),
-                                                      document -> document.getValue().getDocument(), "particularsOfClaim");
+                                                      document -> document.getValue().getDocument(),
+                                                      PARTICULARS_OF_CLAIM
+        );
         assignCategoryId.assignCategoryIdToCollection(caseData.getServedDocumentFiles().getOther(),
-                                                      document -> document.getValue().getDocument(), "particularsOfClaim");
+                                                      document -> document.getValue().getDocument(),
+                                                      PARTICULARS_OF_CLAIM
+        );
     }
 
 }
