@@ -2,14 +2,11 @@ package uk.gov.hmcts.reform.civil.handler.event;
 
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDataContent;
 import uk.gov.hmcts.reform.ccd.client.model.Event;
 import uk.gov.hmcts.reform.ccd.client.model.StartEventResponse;
-import uk.gov.hmcts.reform.civil.documentmanagement.model.Document;
-import uk.gov.hmcts.reform.civil.enums.DocCategory;
 import uk.gov.hmcts.reform.civil.event.BundleCreationTriggerEvent;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.Bundle;
@@ -28,7 +25,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.BUNDLE_CREATION_NOTIFICATION;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CREATE_BUNDLE;
@@ -38,12 +34,11 @@ import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CREATE_BUNDLE;
 @AllArgsConstructor
 public class BundleCreationTriggerEventHandler {
 
-    @Autowired
     private BundleCreationService bundleCreationService;
     private final CoreCaseDataService coreCaseDataService;
     private final CaseDetailsConverter caseDetailsConverter;
 
-    
+
     /**
      * This method will call bundle API and save required details in case data.
      * If there is any existing bundle then new bundle will be added to existing list of bundles.
@@ -60,18 +55,16 @@ public class BundleCreationTriggerEventHandler {
         List<IdValue<Bundle>> caseBundles = caseData.getCaseBundles();
         caseBundles.addAll(bundleCreateResponse.getData().getCaseBundles()
                                .stream().map(bundle -> prepareNewBundle(bundle, caseData)
-            ).collect(Collectors.toList()));
+            ).toList());
         CaseDataContent caseContent = prepareCaseContent(caseBundles, startEventResponse);
         coreCaseDataService.submitUpdate(caseId, caseContent);
         coreCaseDataService.triggerEvent(event.getCaseId(), BUNDLE_CREATION_NOTIFICATION);
     }
 
-    IdValue<Bundle> prepareNewBundle(uk.gov.hmcts.reform.civil.model.bundle.Bundle bundle, CaseData caseData) {
+    public IdValue<Bundle> prepareNewBundle(uk.gov.hmcts.reform.civil.model.bundle.Bundle bundle, CaseData caseData) {
         Bundle result = Bundle.builder()
             .bundleHearingDate(Optional.of(caseData.getHearingDate()))
-            .stitchedDocument(Optional.ofNullable(
-                    deepCopyWithCategoryId(bundle.getValue().getStitchedDocument(),
-                            DocCategory.BUNDLES.getValue())))
+            .stitchedDocument(Optional.ofNullable(bundle.getValue().getStitchedDocument()))
             .fileName(bundle.getValue().getFileName())
             .title(bundle.getValue().getTitle())
             .description(null != bundle.getValue().getDescription()
@@ -80,16 +73,6 @@ public class BundleCreationTriggerEventHandler {
             .createdOn(Optional.of(LocalDateTime.now(ZoneId.of("Europe/London"))))
             .id(bundle.getValue().getId()).build();
         return new IdValue<>(result.getId(), result);
-    }
-
-    private Document deepCopyWithCategoryId(Document sourceDocument, String theID) {
-        return Document.builder()
-                .categoryID(theID)
-                .documentFileName(sourceDocument.getDocumentFileName())
-                .documentBinaryUrl(sourceDocument.getDocumentBinaryUrl())
-                .documentHash(sourceDocument.getDocumentHash())
-                .documentUrl(sourceDocument.getDocumentUrl())
-                .build();
     }
 
     CaseDataContent prepareCaseContent(List<IdValue<Bundle>> caseBundles, StartEventResponse startEventResponse) {
