@@ -21,9 +21,8 @@ import uk.gov.hmcts.reform.civil.service.OrganisationService;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.assertj.core.util.Lists.emptyList;
+import static java.util.Collections.emptyList;
 import static uk.gov.hmcts.reform.civil.enums.CaseCategory.SPEC_CLAIM;
 import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.ONE_V_TWO_ONE_LEGAL_REP;
 import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.ONE_V_TWO_TWO_LEGAL_REP;
@@ -42,6 +41,7 @@ import static uk.gov.hmcts.reform.civil.enums.hearing.PartyType.IND;
 import static uk.gov.hmcts.reform.civil.enums.hearing.PartyType.ORG;
 import static uk.gov.hmcts.reform.civil.enums.MultiPartyScenario.getMultiPartyScenario;
 import static uk.gov.hmcts.reform.civil.enums.hearing.UnavailabilityType.ALL_DAY;
+import static uk.gov.hmcts.reform.civil.helpers.hearingsmappings.CaseFlagsToHearingValueMapper.getOtherReasonableAdjustmentDetails;
 import static uk.gov.hmcts.reform.civil.helpers.hearingsmappings.CaseFlagsToHearingValueMapper.getReasonableAdjustments;
 import static uk.gov.hmcts.reform.civil.helpers.hearingsmappings.CaseFlagsToHearingValueMapper.getVulnerabilityDetails;
 import static uk.gov.hmcts.reform.civil.model.Party.Type.INDIVIDUAL;
@@ -70,13 +70,42 @@ public class HearingsPartyMapper {
         addRespondent1Objects(caseData, organisationService, parties);
         // respondent 2 and related parties
         addRespondent2Objects(caseData, organisationService, parties);
+
+        addSolicitorOrgIndividuals(caseData, parties);
+
         return parties;
     }
 
+    private static void addSolicitorOrgIndividuals(CaseData caseData, List<PartyDetailsModel> parties) {
+
+        // applicant 1 solicitor firm individuals
+        if (caseData.getApplicant1LRIndividuals() != null) {
+            parties.addAll(getDetailsFor(LEGAL_REP_ROLE, caseData.getApplicant1LRIndividuals()));
+        }
+
+        // respondent 1 solicitor firm individuals
+        if (caseData.getRespondent1LRIndividuals() != null) {
+            parties.addAll(getDetailsFor(LEGAL_REP_ROLE, caseData.getRespondent1LRIndividuals()));
+        }
+
+        // respondent 2 solicitor firm individuals
+        if (caseData.getRespondent2LRIndividuals() != null) {
+            parties.addAll(getDetailsFor(LEGAL_REP_ROLE, caseData.getRespondent2LRIndividuals()));
+        }
+    }
+
     private static void addRespondent2Objects(CaseData caseData, OrganisationService organisationService, List<PartyDetailsModel> parties) {
-        // respondent 2
+
         if (YES.equals(caseData.getAddRespondent2())) {
+
+            // respondent 2
             parties.add(getDetailsForPartyObject(caseData.getRespondent2(), DEFENDANT_ROLE.getPartyRoleValue()));
+
+            // respondent 2 org individuals for COMPANY/ORG PartyType
+            if (caseData.getRespondent2().isCompanyOROrganisation() && caseData.getRespondent2OrgIndividuals() != null) {
+                parties.addAll(getDetailsFor(DEFENDANT_ROLE, caseData.getRespondent2OrgIndividuals()));
+            }
+
             // respondent 2 solicitor
             if (ONE_V_TWO_TWO_LEGAL_REP.equals(getMultiPartyScenario(caseData))
                 && caseData.getRespondent2OrganisationPolicy().getOrganisation() != null) {
@@ -85,6 +114,7 @@ public class HearingsPartyMapper {
                     organisationService
                 ));
             }
+
             // 1v2 Same sol and defs file different response
             // or 1v2 diff sol
             // only def 2 files full defence
@@ -94,6 +124,7 @@ public class HearingsPartyMapper {
                 && (SPEC_CLAIM.equals(caseData.getCaseAccessCategory())
                 ? caseData.getRespondent2ClaimResponseTypeForSpec() == RespondentResponseTypeSpec.FULL_DEFENCE
                 : FULL_DEFENCE.equals(caseData.getRespondent2ClaimResponseType()))) {
+
                 // respondent 2 expert
                 if (caseData.getRespondent2Experts() != null
                     && !caseData.getRespondent2Experts().isEmpty()) {
@@ -106,6 +137,7 @@ public class HearingsPartyMapper {
                     parties.addAll(getDetailsFor(WITNESS_ROLE, caseData.getRespondent2Witnesses()));
                 }
             }
+
             // respondent 2 lit friend
             if (caseData.getRespondent2LitigationFriend() != null) {
                 parties.add(getDetailsForLitigationFriendObject(caseData.getRespondent2LitigationFriend()));
@@ -116,6 +148,12 @@ public class HearingsPartyMapper {
     private static void addRespondent1Objects(CaseData caseData, OrganisationService organisationService, List<PartyDetailsModel> parties) {
         // respondent 1
         parties.add(getDetailsForPartyObject(caseData.getRespondent1(), DEFENDANT_ROLE.getPartyRoleValue()));
+
+        // respondent 1 org individuals for COMPANY/ORG PartyType
+        if (caseData.getRespondent1().isCompanyOROrganisation() && caseData.getRespondent1OrgIndividuals() != null) {
+            parties.addAll(getDetailsFor(DEFENDANT_ROLE, caseData.getRespondent1OrgIndividuals()));
+        }
+
         // respondent 1 solicitor
         if (caseData.getRespondent1OrganisationPolicy().getOrganisation() != null) {
             parties.add(getDetailsForSolicitorOrganisation(
@@ -123,6 +161,7 @@ public class HearingsPartyMapper {
                 organisationService
             ));
         }
+
         // respondent 1 expert
         if (caseData.getRespondent1Experts() != null
             && !caseData.getRespondent1Experts().isEmpty()) {
@@ -143,24 +182,30 @@ public class HearingsPartyMapper {
 
     private static void addApplicant2Objects(CaseData caseData, List<PartyDetailsModel> parties) {
         if (TWO_V_ONE.equals(getMultiPartyScenario(caseData))) {
+
             // applicant 2
             parties.add(getDetailsForPartyObject(caseData.getApplicant2(), CLAIMANT_ROLE.getPartyRoleValue()));
+
+            // applicant 2 org individuals for COMPANY/ORG PartyType
+            if (caseData.getApplicant2().isCompanyOROrganisation() && caseData.getApplicant2OrgIndividuals() != null) {
+                parties.addAll(getDetailsFor(CLAIMANT_ROLE, caseData.getApplicant2OrgIndividuals()));
+            }
+
             // 2v1 claimant response - if different response and app 2 proceeds
             if (YES.equals(caseData.getApplicant2ProceedWithClaimMultiParty2v1())
-                && NO.equals(caseData.getApplicant1ProceedWithClaimMultiParty2v1())) {
-                if (caseData.getApplicant2DQ() != null) {
-                    // applicant 2 expert
-                    if (caseData.getApplicantExperts() != null
-                        && !caseData.getApplicantExperts().isEmpty()) {
-                        parties.addAll(getDetailsFor(EXPERT_ROLE, caseData.getApplicantExperts()));
-                    }
-                    // applicant 2 witness
-                    if (caseData.getApplicantWitnesses() != null
-                        && !caseData.getApplicantWitnesses().isEmpty()) {
-                        parties.addAll(getDetailsFor(WITNESS_ROLE, caseData.getApplicantWitnesses()));
-                    }
+                && NO.equals(caseData.getApplicant1ProceedWithClaimMultiParty2v1()) && caseData.getApplicant2DQ() != null) {
+                // applicant 2 expert
+                if (caseData.getApplicantExperts() != null
+                    && !caseData.getApplicantExperts().isEmpty()) {
+                    parties.addAll(getDetailsFor(EXPERT_ROLE, caseData.getApplicantExperts()));
+                }
+                // applicant 2 witness
+                if (caseData.getApplicantWitnesses() != null
+                    && !caseData.getApplicantWitnesses().isEmpty()) {
+                    parties.addAll(getDetailsFor(WITNESS_ROLE, caseData.getApplicantWitnesses()));
                 }
             }
+
             // applicant 2 lit friend
             if (caseData.getApplicant2LitigationFriend() != null) {
                 parties.add(getDetailsForLitigationFriendObject(caseData.getApplicant2LitigationFriend()));
@@ -171,11 +216,19 @@ public class HearingsPartyMapper {
     private static void addApplicant1Objects(CaseData caseData, OrganisationService organisationService, List<PartyDetailsModel> parties) {
         // applicant 1
         parties.add(getDetailsForPartyObject(caseData.getApplicant1(), CLAIMANT_ROLE.getPartyRoleValue()));
+
+        // applicant 1 org individuals for COMPANY/ORG PartyType
+        if (caseData.getApplicant1().isCompanyOROrganisation() && caseData.getApplicant1OrgIndividuals() != null) {
+            parties.addAll(getDetailsFor(CLAIMANT_ROLE, caseData.getApplicant1OrgIndividuals()));
+        }
+
         // applicant 1 solicitor
-        parties.add(getDetailsForSolicitorOrganisation(
-            caseData.getApplicant1OrganisationPolicy(),
-            organisationService
-        ));
+        if (caseData.getApplicant1OrganisationPolicy().getOrganisation() != null) {
+            parties.add(getDetailsForSolicitorOrganisation(
+                caseData.getApplicant1OrganisationPolicy(),
+                organisationService
+            ));
+        }
 
         if (caseData.getApplicant1DQ() != null) {
             // applicant 1 expert
@@ -235,17 +288,18 @@ public class HearingsPartyMapper {
                                           null);
     }
 
-    private static List<PartyDetailsModel> getDetailsFor(PartyRole partyRole, List<Element<PartyFlagStructure>> experts) {
+    private static List<PartyDetailsModel> getDetailsFor(PartyRole partyRole,
+                                                         List<Element<PartyFlagStructure>> hearingIndividuals) {
         List<PartyDetailsModel> partyDetails = new ArrayList<>();
-        List<PartyFlagStructure> filteredList = unwrapElements(experts);
+        List<PartyFlagStructure> filteredList = unwrapElements(hearingIndividuals);
+
         if (!filteredList.isEmpty()) {
             for (PartyFlagStructure partyFlagStructure : filteredList) {
                 partyDetails.add(buildIndividualPartyObject(
                     partyFlagStructure.getPartyID(),
                     partyFlagStructure.getFirstName(),
                     partyFlagStructure.getLastName(),
-                    String.format(FULL_NAME, partyFlagStructure.getFirstName(),
-                                  partyFlagStructure.getLastName()),
+                    String.format(FULL_NAME, partyFlagStructure.getFirstName(), partyFlagStructure.getLastName()),
                     partyRole.getPartyRoleValue(),
                     partyFlagStructure.getEmail(),
                     partyFlagStructure.getPhone(),
@@ -269,13 +323,14 @@ public class HearingsPartyMapper {
             null);
     }
 
+    @SuppressWarnings("java:S107")
     public static PartyDetailsModel buildIndividualPartyObject(String partyId, String firstName, String lastName,
                                                                String partyName, String partyRole,
                                                                String email, String phone,
                                                                Flags flags, List<Element<UnavailableDate>> unavailableDates) {
 
         List<FlagDetail> flagDetails = flags != null &&  flags.getDetails() != null
-            ? flags.getDetails().stream().map(Element::getValue).collect(Collectors.toList()) : List.of();
+            ? flags.getDetails().stream().map(Element::getValue).toList() : List.of();
         List<String> hearingChannelEmail = email == null ? emptyList() : List.of(email);
         List<String> hearingChannelPhone = phone == null ? emptyList() : List.of(phone);
         IndividualDetailsModel individualDetails = IndividualDetailsModel.builder()
@@ -289,6 +344,7 @@ public class HearingsPartyMapper {
             .hearingChannelPhone(hearingChannelPhone)
             .relatedParties(emptyList())
             .custodyStatus(getCustodyStatus(flagDetails))
+            .otherReasonableAdjustmentDetails(getOtherReasonableAdjustmentDetails(flagDetails))
             .build();
 
         return PartyDetailsModel.builder()
@@ -298,8 +354,7 @@ public class HearingsPartyMapper {
             .partyRole(partyRole)
             .individualDetails(individualDetails)
             .unavailabilityDOW(null)
-            .unavailabilityRanges(unavailableDates != null ? unwrapElements(unavailableDates).stream().map(date -> mapUnAvailableDateToRange(date)).collect(
-                Collectors.toList()) : null)
+            .unavailabilityRanges(unavailableDates != null ? unwrapElements(unavailableDates).stream().map(date -> mapUnAvailableDateToRange(date)).toList() : null)
             .hearingSubChannel(null)
             .build();
     }
@@ -321,21 +376,23 @@ public class HearingsPartyMapper {
             .partyRole(partyRole)
             .organisationDetails(organisationDetails)
             .unavailabilityDOW(null)
-            .unavailabilityRanges(unavailableDates != null ? unwrapElements(unavailableDates).stream().map(date -> mapUnAvailableDateToRange(date)).collect(
-                Collectors.toList()) : null)
+            .unavailabilityRanges(unavailableDates != null ? unwrapElements(unavailableDates).stream().map(date -> mapUnAvailableDateToRange(date))
+                    .toList() : null)
             .hearingSubChannel(null)
             .build();
     }
+
+    static final String DATE_STRING = "yyyy-MM-dd";
 
     private static UnavailabilityRangeModel mapUnAvailableDateToRange(UnavailableDate date) {
         return UnavailabilityRangeModel.builder()
             .unavailabilityType(ALL_DAY)
             .unavailableFromDate(SINGLE_DATE.equals(date.getUnavailableDateType()) ? date.getDate()
-                .format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) : date.getFromDate()
-                .format(DateTimeFormatter.ofPattern("yyyy-MM-dd")))
+                .format(DateTimeFormatter.ofPattern(DATE_STRING)) : date.getFromDate()
+                .format(DateTimeFormatter.ofPattern(DATE_STRING)))
             .unavailableToDate(SINGLE_DATE.equals(date.getUnavailableDateType()) ? date.getDate()
-                .format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) : date.getToDate()
-                .format(DateTimeFormatter.ofPattern("yyyy-MM-dd")))
+                .format(DateTimeFormatter.ofPattern(DATE_STRING)) : date.getToDate()
+                .format(DateTimeFormatter.ofPattern(DATE_STRING)))
             .build();
     }
 }
