@@ -5,24 +5,21 @@ import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.civil.config.FeesConfiguration;
 import uk.gov.hmcts.reform.civil.model.ClaimValue;
 import uk.gov.hmcts.reform.civil.model.Fee;
-import uk.gov.hmcts.reform.fees.client.FeesClient;
-import uk.gov.hmcts.reform.fees.client.model.Fee2Dto;
-import uk.gov.hmcts.reform.fees.client.model.FeeLookupResponseDto;
+import uk.gov.hmcts.reform.civil.model.Fee2Dto;
+import uk.gov.hmcts.reform.civil.model.FeeLookupResponseDto;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FeesService {
 
     private static final BigDecimal PENCE_PER_POUND = BigDecimal.valueOf(100);
-
-    private final FeesClient feesClient;
+    private final FeesClientService feesClient;
     private final FeesConfiguration feesConfiguration;
 
     public Fee getFeeDataByClaimValue(ClaimValue claimValue) {
@@ -92,7 +89,7 @@ public class FeesService {
         return Arrays.stream(feeRanges)
             .sorted(Comparator.comparing(Fee2Dto::getMinRange, Comparator.nullsFirst(Comparator.naturalOrder())))
             .filter(e -> e.getMinRange() != null)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
