@@ -4,14 +4,20 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.ccd.client.model.CaseEventDetail;
 import uk.gov.hmcts.reform.ccd.client.model.SearchResult;
+import uk.gov.hmcts.reform.civil.documentmanagement.model.DocumentType;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.CaseData;
-import uk.gov.hmcts.reform.civil.model.citizenui.CcdDashboardClaimMatcher;
+import uk.gov.hmcts.reform.civil.model.citizenui.CcdDashboardClaimantClaimMatcher;
+import uk.gov.hmcts.reform.civil.model.citizenui.CcdDashboardDefendantClaimMatcher;
 import uk.gov.hmcts.reform.civil.model.citizenui.DashboardClaimInfo;
+import uk.gov.hmcts.reform.civil.model.citizenui.DashboardClaimStatus;
 import uk.gov.hmcts.reform.civil.model.citizenui.DashboardClaimStatusFactory;
 import uk.gov.hmcts.reform.civil.model.citizenui.DashboardResponse;
+import uk.gov.hmcts.reform.civil.model.judgmentonline.JudgmentType;
 import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
+import uk.gov.hmcts.reform.civil.service.CoreCaseEventDataService;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.claimstore.ClaimStoreService;
 
@@ -22,7 +28,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -38,6 +43,7 @@ public class DashboardClaimInfoService {
     private final CoreCaseDataService coreCaseDataService;
     private final DashboardClaimStatusFactory dashboardClaimStatusFactory;
     private final FeatureToggleService featureToggleService;
+    private final CoreCaseEventDataService eventDataService;
 
     public List<DashboardClaimInfo> getOcmcDefendantClaims(String authorisation, String defendantId) {
         log.info("-----------calling ocmc getOCMCDefendantClaims()-------------");
@@ -54,7 +60,7 @@ public class DashboardClaimInfoService {
         var ccdData = coreCaseDataService.getCCDClaimsForLipDefendant(authorisation, startIndex);
         int totalPages = getTotalPagesToBeListed(ccdData.getTotal() + ocmcClaims.size());
         List<DashboardClaimInfo> currentPageItems = currentPage <= totalPages
-            ? getDashboardItemsForCurrentPage(ocmcClaims, currentPage, ccdData) :
+            ? getDashboardItemsForCurrentPage(ocmcClaims, currentPage, ccdData, false) :
             Collections.emptyList();
         return DashboardResponse.builder().totalPages(totalPages).claims(currentPageItems).build();
     }
@@ -71,20 +77,20 @@ public class DashboardClaimInfoService {
 
         int totalPages = getTotalPagesToBeListed(getCcdClaimsCount(ccdData) + ocmcClaims.size());
         List<DashboardClaimInfo> currentPageItems = currentPage <= totalPages
-            ? getDashboardItemsForCurrentPage(ocmcClaims, currentPage, ccdData) :
+            ? getDashboardItemsForCurrentPage(ocmcClaims, currentPage, ccdData, true) :
             Collections.emptyList();
         return DashboardResponse.builder().totalPages(totalPages).claims(currentPageItems).build();
     }
 
     private List<DashboardClaimInfo> getClaimsForClaimant(String authorisation, String claimantId) {
         log.info("-----------calling ocmc claimant claims-------------");
-        List<DashboardClaimInfo> ocmcClaims = claimStoreService.getClaimsForClaimant(authorisation, claimantId);
-        return ocmcClaims;
+        return claimStoreService.getClaimsForClaimant(authorisation, claimantId);
     }
 
     private List<DashboardClaimInfo> getDashboardItemsForCurrentPage(List<DashboardClaimInfo> ocmcClaims,
                                                                      int currentPage,
-                                                                     SearchResult ccdClaims) {
+                                                                     SearchResult ccdClaims,
+                                                                     boolean isClaimant) {
 
         int startIndex = (currentPage - 1) * CASES_PER_PAGE;
         int endIndex = startIndex + CASES_PER_PAGE;
@@ -96,7 +102,7 @@ public class DashboardClaimInfoService {
             int end = Math.min(currentPage * CASES_PER_PAGE, ocmcClaims.size());
             dashBoardClaimInfo.addAll(sortOcmcCases(ocmcClaims.subList(ocmcStartIndex, end)));
         } else {
-            var ccdData = translateSearchResultToDashboardItems(ccdClaims);
+            var ccdData = translateSearchResultToDashboardItems(ccdClaims, isClaimant);
             dashBoardClaimInfo.addAll(ccdData);
             if (ccdData.size() < CASES_PER_PAGE && endIndex > ccdClaimsCount) {
                 int remainingRecords = CASES_PER_PAGE - ccdData.size();
@@ -111,19 +117,22 @@ public class DashboardClaimInfoService {
     private List<DashboardClaimInfo> sortOcmcCases(List<DashboardClaimInfo> ocmcCases) {
         return ocmcCases.stream()
             .sorted(Comparator.comparing(DashboardClaimInfo::getCreatedDate).reversed())
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    private List<DashboardClaimInfo> translateSearchResultToDashboardItems(SearchResult claims) {
+    private List<DashboardClaimInfo> translateSearchResultToDashboardItems(SearchResult claims, boolean isClaimant) {
         if (claims == null) {
             return Collections.emptyList();
         }
 
-        return claims.getCases().stream().map(caseDetails -> translateCaseDataToDashboardClaimInfo(caseDetails))
-            .collect(Collectors.toList());
+        return claims.getCases().stream().map(caseDetails -> translateCaseDataToDashboardClaimInfo(
+                caseDetails,
+                isClaimant
+            ))
+            .toList();
     }
 
-    private DashboardClaimInfo translateCaseDataToDashboardClaimInfo(CaseDetails caseDetails) {
+    private DashboardClaimInfo translateCaseDataToDashboardClaimInfo(CaseDetails caseDetails, boolean isClaimant) {
         CaseData caseData = caseDetailsConverter.toCaseData(caseDetails);
         DashboardClaimInfo item = DashboardClaimInfo.builder().claimId(String.valueOf(caseData.getCcdCaseReference()))
             .createdDate(submittedDateToCreatedDate(caseData))
@@ -133,7 +142,7 @@ public class DashboardClaimInfoService {
             .claimAmount(nonNull(caseData.getTotalClaimAmount()) ? caseData.getTotalClaimAmount() : null)
             .admittedAmount(caseData.getPartAdmitPaidValuePounds())
             .responseDeadlineTime(caseData.getRespondent1ResponseDeadline())
-            .status(dashboardClaimStatusFactory.getDashboardClaimStatus(new CcdDashboardClaimMatcher(caseData, featureToggleService)))
+            .status(getStatus(isClaimant, caseData))
             .build();
         if (caseData.getRespondent1ResponseDeadline() != null) {
             item.setResponseDeadline(caseData.getRespondent1ResponseDeadline().toLocalDate());
@@ -144,6 +153,31 @@ public class DashboardClaimInfoService {
 
         if (caseData.getRespondToAdmittedClaimOwingAmountPounds() != null) {
             item.setRespondToAdmittedClaimOwingAmountPounds(caseData.getRespondToAdmittedClaimOwingAmountPounds());
+        }
+
+        if (caseData.hasApplicant1AcceptedCcj()) {
+            item.setCcjRequestedDate(caseData.getApplicant1ResponseDate());
+        }
+
+        if (caseData.getActiveJudgment() != null) {
+            item.setCcjRequestedDate(caseData.getActiveJudgment().getCreatedTimestamp());
+        } else if (caseData.isCcjRequestJudgmentByAdmission() && caseData.hasApplicant1AcceptedCcj()) {
+            item.setCcjRequestedDate(caseData.getApplicant1ResponseDate());
+        } else {
+            item.setCcjRequestedDate(caseData.getTakenOfflineDate());
+        }
+
+        if (caseData.getActiveJudgment() != null
+            && caseData.getActiveJudgment().getType().equals(JudgmentType.DEFAULT_JUDGMENT)
+            && caseData.getActiveJudgment().getIssueDate() != null) {
+            item.setDefaultJudgementIssuedDate(caseData.getActiveJudgment().getIssueDate());
+        } else if (caseData.getActiveJudgment() == null && caseData.getDefaultJudgmentDocuments() != null) {
+            caseData.getDefaultJudgmentDocuments().stream()
+                .map(el -> el.getValue())
+                .filter(doc -> doc.getDocumentType().equals(DocumentType.DEFAULT_JUDGMENT))
+                .map(doc -> doc.getCreatedDatetime().toLocalDate())
+                .findFirst()
+                .ifPresent(item::setDefaultJudgementIssuedDate);
         }
 
         return item;
@@ -169,5 +203,20 @@ public class DashboardClaimInfoService {
     private int getCcdClaimsCount(final SearchResult ccdClaims) {
 
         return Optional.ofNullable(ccdClaims).map(SearchResult::getTotal).orElse(0);
+    }
+
+    private DashboardClaimStatus getStatus(boolean isClaimant, CaseData caseData) {
+        List<CaseEventDetail> events = Optional.ofNullable(caseData.getCcdCaseReference())
+                .map(s -> eventDataService.getEventsForCase(s.toString()))
+                    .orElse(Collections.emptyList());
+        return isClaimant
+            ? dashboardClaimStatusFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
+            caseData,
+            featureToggleService, events
+        ))
+            : dashboardClaimStatusFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
+            caseData,
+            featureToggleService, events
+        ));
     }
 }
