@@ -11,7 +11,6 @@ import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.asList;
 import static java.util.Objects.requireNonNull;
@@ -66,7 +65,6 @@ public class AddressLinesMapper {
     }
 
     private Queue<String> resolveAddressLine(String addressLine, String overflow, boolean overflowAllowed) {
-        String retained;
         addressLine = StringUtils.defaultString(addressLine);
         if (StringUtils.isEmpty(addressLine)) {
             if (StringUtils.isEmpty(overflow)) {
@@ -93,6 +91,7 @@ public class AddressLinesMapper {
             return new LinkedList<>(Arrays.asList(returnAddress, STRING_EMPTY));
         }
 
+        String retained;
         if (StringUtils.length(StringUtils.defaultString(overflow)) + StringUtils.length(addressLine) > LINE_LIMIT) {
             retained = STRING_EMPTY;
             Queue<String> addressParts = new LinkedList<>(Splitter.on(CHAR_SPACE).omitEmptyStrings()
@@ -142,6 +141,6 @@ public class AddressLinesMapper {
                                                   .splitToList(line));
         String lastToken = tokens.remove(tokens.size() - 1);
         return asList(String.join(",", tokens), lastToken.trim())
-            .stream().map(String::trim).collect(Collectors.toList());
+            .stream().map(String::trim).toList();
     }
 }
