@@ -5,7 +5,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mockito;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
@@ -26,59 +27,76 @@ import uk.gov.hmcts.reform.civil.enums.CaseCategory;
 import uk.gov.hmcts.reform.civil.enums.CaseRole;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
 import uk.gov.hmcts.reform.civil.handler.callback.BaseCallbackHandlerTest;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.CalculateFeeTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.CalculateSpecFeeTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.CalculateTotalClaimAmountTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.GetAirlineListTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.SpecValidateClaimInterestDateTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.SpecValidateClaimTimelineDateTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.SubmitClaimTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.ValidateClaimantDetailsTask;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.createclaim.ValidateRespondentDetailsTask;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
-import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.Address;
+import uk.gov.hmcts.reform.civil.model.AirlineEpimsId;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.ClaimAmountBreakup;
 import uk.gov.hmcts.reform.civil.model.ClaimAmountBreakupDetails;
 import uk.gov.hmcts.reform.civil.model.CorrectEmail;
 import uk.gov.hmcts.reform.civil.model.DefendantPinToPostLRspec;
 import uk.gov.hmcts.reform.civil.model.Fee;
+import uk.gov.hmcts.reform.civil.model.FlightDelayDetails;
 import uk.gov.hmcts.reform.civil.model.IdamUserDetails;
 import uk.gov.hmcts.reform.civil.model.Party;
+import uk.gov.hmcts.reform.civil.model.Party.Type;
 import uk.gov.hmcts.reform.civil.model.ServedDocumentFiles;
 import uk.gov.hmcts.reform.civil.model.SolicitorOrganisationDetails;
 import uk.gov.hmcts.reform.civil.model.StatementOfTruth;
-import uk.gov.hmcts.reform.civil.model.TimelineOfEvents;
 import uk.gov.hmcts.reform.civil.model.TimelineOfEventDetails;
+import uk.gov.hmcts.reform.civil.model.TimelineOfEvents;
+import uk.gov.hmcts.reform.civil.model.common.DynamicList;
+import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
 import uk.gov.hmcts.reform.civil.model.interestcalc.InterestClaimFromType;
 import uk.gov.hmcts.reform.civil.model.interestcalc.InterestClaimOptions;
 import uk.gov.hmcts.reform.civil.model.interestcalc.SameRateInterestSelection;
 import uk.gov.hmcts.reform.civil.model.interestcalc.SameRateInterestType;
-import uk.gov.hmcts.reform.civil.model.common.DynamicList;
-import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
+import uk.gov.hmcts.reform.civil.prd.model.Organisation;
+import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.sampledata.AddressBuilder;
 import uk.gov.hmcts.reform.civil.sampledata.CallbackParamsBuilder;
 import uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder;
+import uk.gov.hmcts.reform.civil.sampledata.LocationRefSampleDataBuilder;
 import uk.gov.hmcts.reform.civil.sampledata.PartyBuilder;
+import uk.gov.hmcts.reform.civil.service.AirlineEpimsDataLoader;
+import uk.gov.hmcts.reform.civil.service.AirlineEpimsService;
 import uk.gov.hmcts.reform.civil.service.ExitSurveyContentService;
+import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.FeesService;
 import uk.gov.hmcts.reform.civil.service.OrganisationService;
 import uk.gov.hmcts.reform.civil.service.Time;
-import uk.gov.hmcts.reform.civil.service.flowstate.StateFlowEngine;
+import uk.gov.hmcts.reform.civil.service.flowstate.SimpleStateFlowEngine;
+import uk.gov.hmcts.reform.civil.service.flowstate.TransitionsTestConfiguration;
 import uk.gov.hmcts.reform.civil.service.pininpost.DefendantPinToPostLRspecService;
+import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
+import uk.gov.hmcts.reform.civil.stateflow.simplegrammar.SimpleStateFlowBuilder;
 import uk.gov.hmcts.reform.civil.utils.AccessCodeGenerator;
 import uk.gov.hmcts.reform.civil.utils.CaseFlagsInitialiser;
 import uk.gov.hmcts.reform.civil.utils.InterestCalculator;
 import uk.gov.hmcts.reform.civil.validation.DateOfBirthValidator;
 import uk.gov.hmcts.reform.civil.validation.OrgPolicyValidator;
+import uk.gov.hmcts.reform.civil.validation.PartyValidator;
 import uk.gov.hmcts.reform.civil.validation.PostcodeValidator;
 import uk.gov.hmcts.reform.civil.validation.ValidateEmailService;
-import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
-import uk.gov.hmcts.reform.civil.prd.model.Organisation;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.time.LocalDate.now;
@@ -96,14 +114,10 @@ import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CREATE_CLAIM_SPEC;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CREATE_SERVICE_REQUEST_CLAIM;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
-import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimSpecCallbackHandler.CONFIRMATION_SUMMARY;
 import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimSpecCallbackHandler.CONFIRMATION_SUMMARY_PBA_V3;
-import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimSpecCallbackHandler.LIP_CONFIRMATION_BODY;
-import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimSpecCallbackHandler.SPEC_CONFIRMATION_SUMMARY;
+import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimSpecCallbackHandler.INTEREST_FROM_PAGE_ID;
 import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimSpecCallbackHandler.SPEC_CONFIRMATION_SUMMARY_PBA_V3;
 import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimSpecCallbackHandler.SPEC_LIP_CONFIRMATION_BODY_PBAV3;
-import static uk.gov.hmcts.reform.civil.helpers.DateFormatHelper.DATE_TIME_AT;
-import static uk.gov.hmcts.reform.civil.helpers.DateFormatHelper.formatLocalDateTime;
 import static uk.gov.hmcts.reform.civil.utils.PartyUtils.getPartyNameBasedOnType;
 
 @ExtendWith(SpringExtension.class)
@@ -118,14 +132,25 @@ import static uk.gov.hmcts.reform.civil.utils.PartyUtils.getPartyNameBasedOnType
     ValidationAutoConfiguration.class,
     DateOfBirthValidator.class,
     OrgPolicyValidator.class,
-    StateFlowEngine.class,
     PostcodeValidator.class,
     InterestCalculator.class,
-    StateFlowEngine.class,
+    SimpleStateFlowEngine.class,
+    SimpleStateFlowBuilder.class,
+    TransitionsTestConfiguration.class,
     ValidateEmailService.class,
-    },
+    PartyValidator.class,
+    CalculateFeeTask.class,
+    CalculateSpecFeeTask.class,
+    CalculateTotalClaimAmountTask.class,
+    GetAirlineListTask.class,
+    SpecValidateClaimInterestDateTask.class,
+    SpecValidateClaimTimelineDateTask.class,
+    ValidateRespondentDetailsTask.class,
+    ValidateClaimantDetailsTask.class,
+    SubmitClaimTask.class
+},
     properties = {"reference.database.enabled=false"})
-class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
+class  CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
     public static final String REFERENCE_NUMBER = "000MC001";
 
@@ -143,7 +168,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         + "%n%nOnce the claim has been issued, you will need to serve the claim upon the "
         + "defendant which must include a response pack"
         + "%n%nYou will need to send the following:<ul style=\"margin-bottom : 0px;\"> <li> <a href=\"%s\" target=\"_blank\">sealed claim form</a> "
-        + "</li><li><a href=\"%s\" target=\"_blank\">response pack</a></li><ul style=\"list-style-type:circle\"><li><a href=\"%s\" target=\"_blank\">N9A</a></li>"
+        +
+        "</li><li><a href=\"%s\" target=\"_blank\">response pack</a></li><ul style=\"list-style-type:circle\"><li><a href=\"%s\" target=\"_blank\">N9A</a></li>"
         + "<li><a href=\"%s\" target=\"_blank\">N9B</a></li></ul><li>and any supporting documents</li></ul>"
         + "to the defendant within 4 months."
         + "%n%nFollowing this, you will need to file a Certificate of Service and supporting documents "
@@ -163,9 +189,6 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
     @MockBean
     private OrganisationService organisationService;
 
-    @MockBean
-    private IdamClient idamClient;
-
     @Autowired
     private ValidateEmailService validateEmailService;
 
@@ -180,6 +203,9 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
     @MockBean
     private PostcodeValidator postcodeValidator;
+
+    @Autowired
+    private PartyValidator partyValidator;
 
     @MockBean
     private InterestCalculator interestCalculator;
@@ -204,6 +230,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
     @MockBean
     private ToggleConfiguration toggleConfiguration;
+
+    @MockBean
+    protected LocationReferenceDataService locationRefDataService;
+
+    @MockBean
+    private AirlineEpimsDataLoader airlineEpimsDataLoader;
+
+    @MockBean
+    private AirlineEpimsService airlineEpimsService;
 
     @Nested
     class AboutToStartCallback {
@@ -266,10 +301,12 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldReturnError_whenIndividualDateOfBirthIsInTheFuture() {
             // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().plusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -283,10 +320,12 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldReturnError_whenSoleTraderDateOfBirthIsInTheFuture() {
             // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().plusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -300,10 +339,12 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldReturnNoError_whenIndividualDateOfBirthIsInThePast() {
             // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().minusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().minusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -317,10 +358,149 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldReturnNoError_whenSoleTraderDateOfBirthIsInThePast() {
             // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().minusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().minusDays(1))
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant1(Party.builder().type(Party.Type.ORGANISATION)
+                    .primaryAddress(Address.builder()
+                        .addressLine1("Line 1 test again for more than 35 characters")
+                        .addressLine2("Line 1 test again for more than 35 characters")
+                        .addressLine3("Line 1 test again for more than 35 characters")
+                        .county("Line 1 test again for more than 35 characters")
+                        .postCode("Line 1 test again for more than 35 characters")
+                        .postTown("Line 1 test again for more than 35 characters").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+            assertThat(response.getErrors()).hasSize(6);
+
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_Company_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant1(Party.builder()
+                    .type(Party.Type.COMPANY)
+                    .primaryAddress(Address.builder().addressLine1("TEST").build())
+                    .companyName("MR This is very long nam exceeds 70 characters to throw"
+                        + " error for max length allowed").build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_Individual_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant1(Party.builder()
+                    .type(Party.Type.INDIVIDUAL)
+                    .individualFirstName("This is very long name")
+                    .individualTitle("MR")
+                    .individualLastName("exceeds 70 characters to throw error for max length allowed")
+                    .primaryAddress(Address.builder().addressLine1("Address line 1").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_sole_trader_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant1(Party.builder()
+                    .type(Party.Type.SOLE_TRADER)
+                    .soleTraderFirstName("This is very long name")
+                    .soleTraderTitle("MR")
+                    .soleTraderLastName("exceeds 70 characters to throw error for max length allowed")
+                    .primaryAddress(Address.builder().addressLine1("Address line 1").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_org_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant1(Party.builder()
+                    .type(Party.Type.ORGANISATION)
+                    .organisationName("This is very long name exceeds 70 characters "
+                        + " to throw error for max length allowed")
+                    .primaryAddress(Address.builder().addressLine1("Address line 1").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+        }
+
+        @Test
+        void shouldNotError_when_address_exceeds_max_length_in_org_name_when_flag_in_off() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(false);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant1(Party.builder()
+                    .type(Party.Type.ORGANISATION)
+                    .organisationName("This is very long name exceeds 70 characters "
+                        + " to throw error for max length allowed")
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -342,8 +522,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             // Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().plusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -359,8 +539,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             // Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().plusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -376,8 +556,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             // Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().minusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().minusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -393,8 +573,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             // Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().minusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().minusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -403,6 +583,122 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             // Then
             assertThat(response.getErrors()).isEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant2(Party.builder().type(Party.Type.INDIVIDUAL)
+                    .primaryAddress(Address.builder()
+                        .addressLine1("Line 1 test again for more than 35 characters")
+                        .addressLine2("Line 1 test again for more than 35 characters")
+                        .addressLine3("Line 1 test again for more than 35 characters")
+                        .county("Line 1 test again for more than 35 characters")
+                        .postCode("Line 1 test again for more than 35 characters")
+                        .postTown("Line 1 test again for more than 35 characters").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+            assertThat(response.getErrors()).hasSize(6);
+
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_Company_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant2(Party.builder()
+                    .type(Party.Type.COMPANY)
+                    .primaryAddress(Address.builder().addressLine1("TEST").build())
+                    .companyName("MR This is very long nam exceeds 70 characters to throw"
+                        + " error for max length allowed").build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_Individual_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant2(Party.builder()
+                    .type(Party.Type.INDIVIDUAL)
+                    .individualFirstName("This is very long name")
+                    .individualTitle("MR")
+                    .individualLastName("exceeds 70 characters to throw error for max length allowed")
+                    .primaryAddress(Address.builder().addressLine1("Address line 1").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_sole_trader_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant2(Party.builder()
+                    .type(Type.SOLE_TRADER)
+                    .soleTraderFirstName("This is very long name")
+                    .soleTraderTitle("MR")
+                    .soleTraderLastName("exceeds 70 characters to throw error for max length allowed")
+                    .primaryAddress(Address.builder().addressLine1("Address line 1").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+        }
+
+        @Test
+        void shouldReturnError_when_address_exceeds_max_length_in_org_name() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .applicant2(Party.builder()
+                    .type(Party.Type.ORGANISATION)
+                    .organisationName("This is very long name exceeds 70 characters "
+                        + " to throw error for max length allowed")
+                    .primaryAddress(Address.builder().addressLine1("Address line 1").build())
+                    .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
         }
     }
 
@@ -443,8 +739,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnNoErrors_whenParticularOfClaimsFieldsAreValid() {
             // Given
             CaseData caseData = caseDataBuilder.servedDocumentFiles(ServedDocumentFiles.builder()
-                                                                        .particularsOfClaimText("Some string")
-                                                                        .build()).build();
+                .particularsOfClaimText("Some string")
+                .build()).build();
             CallbackParams params = callbackParamsOf(caseData, MID, pageId);
 
             // When
@@ -503,7 +799,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             List<String> actualPbas = dynamicList.getListItems().stream()
                 .map(DynamicListElement::getLabel)
-                .collect(Collectors.toList());
+                .toList();
 
             assertThat(actualPbas).containsOnly("12345", "98765");
             assertThat(dynamicList.getValue()).isEqualTo(DynamicListElement.EMPTY);
@@ -542,7 +838,6 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldSetPBAv3SpecFlagOn_whenPBAv3IsActivated() {
             // Given
             given(organisationService.findOrganisation(any())).willReturn(Optional.empty());
-            when(toggleService.isPbaV3Enabled()).thenReturn(true);
 
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build();
             CallbackParams params = callbackParamsOf(caseData, MID, pageId);
@@ -571,7 +866,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             String userId = UUID.randomUUID().toString();
             String email = "example@email.com";
 
-            given(idamClient.getUserDetails(any()))
+            given(userService.getUserDetails(any()))
                 .willReturn(UserDetails.builder().email(email).id(userId).build());
 
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build();
@@ -593,13 +888,13 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             String userId = UUID.randomUUID().toString();
             String email = "example@email.com";
 
-            given(idamClient.getUserDetails(any()))
+            given(userService.getUserDetails(any()))
                 .willReturn(UserDetails.builder().email(email).id(userId).build());
 
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                 .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                                                    .email("email@example.com")
-                                                    .build())
+                    .email("email@example.com")
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -882,16 +1177,16 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
     class MidAmountBreakup {
 
         @Test
-        void shouldCalculateAmoutBreakup_whenCalled() {
+        void shouldCalculateAmountBreakup_whenCalled() {
             // Given
             List<ClaimAmountBreakup> claimAmountBreakup = new ArrayList<>();
             claimAmountBreakup.add(ClaimAmountBreakup.builder()
-                                       .value(ClaimAmountBreakupDetails.builder()
-                                                  .claimAmount(new BigDecimal(1000)).claimReason("Test reason1").build()).build());
+                .value(ClaimAmountBreakupDetails.builder()
+                    .claimAmount(new BigDecimal(1000)).claimReason("Test reason1").build()).build());
 
             claimAmountBreakup.add(ClaimAmountBreakup.builder()
-                                       .value(ClaimAmountBreakupDetails.builder()
-                                                  .claimAmount(new BigDecimal(2000)).claimReason("Test reason2").build()).build());
+                .value(ClaimAmountBreakupDetails.builder()
+                    .claimAmount(new BigDecimal(2000)).claimReason("Test reason2").build()).build());
 
             CaseData caseData = CaseData.builder().claimAmountBreakup(claimAmountBreakup).build();
 
@@ -905,8 +1200,26 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .containsEntry("claimAmountBreakupSummaryObject", " | Description | Amount | \n" +
                     " |---|---| \n" +
                     " | Test reason1 | £ 10.00 |\n" +
-                    " Test reason2 | £ 20.00 |\n" +
-                    "  | **Total** | £ 30.00 | ");
+                    " | Test reason2 | £ 20.00 |\n" +
+                    " | **Total** | £ 30.00 | ");
+        }
+
+        @Test
+        void shouldCalculateAmount_AndReturnNoErrorWhenAbove25kAndToggleActive() {
+            // Given
+            when(toggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
+            List<ClaimAmountBreakup> claimAmountBreakup = new ArrayList<>();
+            claimAmountBreakup.add(ClaimAmountBreakup.builder()
+                .value(ClaimAmountBreakupDetails.builder()
+                    .claimAmount(new BigDecimal(10000000))
+                    .claimReason("Test reason1").build())
+                .build());
+            CaseData caseData = CaseData.builder().claimAmountBreakup(claimAmountBreakup).build();
+            CallbackParams params = callbackParamsOf(caseData, MID, "amount-breakup");
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            // Then
+            assertThat(response.getErrors()).isNull();
         }
     }
 
@@ -919,7 +1232,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseData.builder().claimInterest(YES)
                 .interestClaimOptions(InterestClaimOptions.SAME_RATE_INTEREST)
                 .sameRateInterestSelection(SameRateInterestSelection.builder()
-                                               .sameRateInterestType(SameRateInterestType.SAME_RATE_INTEREST_8_PC).build())
+                    .sameRateInterestType(SameRateInterestType.SAME_RATE_INTEREST_8_PC).build())
                 .interestClaimFrom(InterestClaimFromType.FROM_CLAIM_SUBMIT_DATE)
                 .totalClaimAmount(new BigDecimal(1000)).build();
 
@@ -928,6 +1241,31 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             // When
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getData()).containsEntry("calculatedInterest", " | Description | Amount | \n" +
+                " |---|---| \n" +
+                " | Claim amount | £ 1000 | \n" +
+                " | Interest amount | £ 0 | \n" +
+                " | Total amount | £ 1000 |");
+        }
+
+        @Test
+        void shouldDefaultInterestUntil_whenInterestFromIsSubmittedDate() {
+            // Given
+            CaseData caseData = CaseData.builder().claimInterest(YES)
+                .interestClaimOptions(InterestClaimOptions.SAME_RATE_INTEREST)
+                .sameRateInterestSelection(SameRateInterestSelection.builder()
+                    .sameRateInterestType(SameRateInterestType.SAME_RATE_INTEREST_8_PC).build())
+                .interestClaimFrom(InterestClaimFromType.FROM_CLAIM_SUBMIT_DATE)
+                .totalClaimAmount(new BigDecimal(1000)).build();
+
+            when(interestCalculator.calculateInterest(any(CaseData.class))).thenReturn(new BigDecimal(0));
+            CallbackParams params = callbackParamsOf(caseData, MID, INTEREST_FROM_PAGE_ID);
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            assertThat(response.getData()).containsEntry("interestClaimUntil", "UNTIL_SETTLED_OR_JUDGEMENT_MADE");
 
             // Then
             assertThat(response.getData()).containsEntry("calculatedInterest", " | Description | Amount | \n" +
@@ -981,7 +1319,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldValidateClaimTimelineDate_whenPopulated() {
             // Given
             List<TimelineOfEvents> timelineOfEvents = new ArrayList<>();
-            timelineOfEvents.add(TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().minusDays(1)).build()).build());
+            timelineOfEvents.add(
+                TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().minusDays(1)).build()).build());
             CaseData caseData = CaseData.builder().timelineOfEvents(timelineOfEvents)
                 .build();
 
@@ -997,7 +1336,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnErrorWhenTimelineDatePopulatedWithFutureDate() {
             // Given
             List<TimelineOfEvents> timelineOfEvents = new ArrayList<>();
-            timelineOfEvents.add(TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().plusDays(1)).build()).build());
+            timelineOfEvents.add(
+                TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().plusDays(1)).build()).build());
             CaseData caseData = CaseData.builder().timelineOfEvents(timelineOfEvents)
                 .build();
 
@@ -1017,7 +1357,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldValidateClaimTimelineDate_whenPopulated() {
             // Given
             List<TimelineOfEvents> timelineOfEvents = new ArrayList<>();
-            timelineOfEvents.add(TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().minusDays(1)).build()).build());
+            timelineOfEvents.add(
+                TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().minusDays(1)).build()).build());
             CaseData caseData = CaseData.builder().totalClaimAmount(new BigDecimal(1000))
                 .build();
 
@@ -1041,11 +1382,12 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldCalculateSpecFee_whenPopulated() {
             // Given
             List<TimelineOfEvents> timelineOfEvents = new ArrayList<>();
-            timelineOfEvents.add(TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().minusDays(1)).build()).build());
+            timelineOfEvents.add(
+                TimelineOfEvents.builder().value(TimelineOfEventDetails.builder().timelineDate(LocalDate.now().minusDays(1)).build()).build());
             CaseData caseData = CaseData.builder().claimInterest(YES)
                 .interestClaimOptions(InterestClaimOptions.SAME_RATE_INTEREST)
                 .sameRateInterestSelection(SameRateInterestSelection.builder()
-                                               .sameRateInterestType(SameRateInterestType.SAME_RATE_INTEREST_8_PC).build())
+                    .sameRateInterestType(SameRateInterestType.SAME_RATE_INTEREST_8_PC).build())
                 .interestClaimFrom(InterestClaimFromType.FROM_CLAIM_SUBMIT_DATE)
                 .totalClaimAmount(new BigDecimal(1000))
                 .build();
@@ -1135,7 +1477,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 // Then
                 assertThat(response.getErrors()).containsExactly("Enter an email address in the correct format,"
-                                                                     + " for example john.smith@example.com");
+                    + " for example john.smith@example.com");
             }
         }
 
@@ -1176,7 +1518,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 // Then
                 assertThat(response.getErrors()).containsExactly("Enter an email address in the correct format,"
-                                                                     + " for example john.smith@example.com");
+                    + " for example john.smith@example.com");
             }
 
             @Test
@@ -1213,7 +1555,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 // Then
                 assertThat(response.getErrors()).containsExactly("Enter an email address in the correct format,"
-                                                                     + " for example john.smith@example.com");
+                    + " for example john.smith@example.com");
             }
 
             @Test
@@ -1250,7 +1592,7 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 // Then
                 assertThat(response.getErrors()).containsExactly("Enter an email address in the correct format,"
-                                                                     + " for example john.smith@example.com");
+                    + " for example john.smith@example.com");
             }
 
         }
@@ -1261,6 +1603,11 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
         @Nested
         class Respondent1Address {
+
+            @BeforeEach
+            void setup() {
+                when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+            }
 
             @Test
             void shouldReturnNoErrors_whenRespondent1AddressValid() {
@@ -1279,38 +1626,42 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 // Then
                 assertThat(response).isNotNull();
-                assertThat(response.getData()).isNull();
-                assertThat(response.getErrors()).isNotNull();
+                assertThat(response.getData()).isNotNull();
                 assertEquals(0, response.getErrors().size());
             }
 
             @Test
             void shouldReturnErrors_whenRespondent1AddressNotValid() {
                 // Given
-                Party respondent1 = Party.builder().primaryAddress(Address.builder().postCode(null).build()).build();
-
-                CaseData caseData = CaseData.builder().respondent1(respondent1).build();
+                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                    .respondent1(Party.builder().type(Party.Type.ORGANISATION)
+                        .primaryAddress(Address.builder()
+                            .addressLine1("Line 1 test again for more than 35 characters")
+                            .addressLine2("Line 1 test again for more than 35 characters")
+                            .addressLine3("Line 1 test again for more than 35 characters")
+                            .county("Line 1 test again for more than 35 characters")
+                            .postCode("PostCode test more than 8 characters")
+                            .postTown("Line 1 test again for more than 35 characters").build())
+                        .build()).build();
 
                 CallbackParams params = callbackParamsOf(caseData, MID, "respondent1");
 
-                given(postcodeValidator.validate(any()))
-                    .willReturn(List.of("Please enter Postcode"));
-
                 // When
-                AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
-                    .handle(params);
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
                 // Then
-                assertThat(response).isNotNull();
-                assertThat(response.getData()).isNull();
-                assertThat(response.getErrors()).isNotNull();
-                assertEquals(1, response.getErrors().size());
-                assertEquals("Please enter Postcode", response.getErrors().get(0));
+                assertThat(response.getErrors()).isNotEmpty();
+                assertThat(response.getErrors()).hasSize(6);
             }
         }
 
         @Nested
         class Respondent2Address {
+
+            @BeforeEach
+            void setup() {
+                when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+            }
 
             @Test
             void shouldReturnNoErrors_whenRespondent2AddressValid() {
@@ -1329,33 +1680,33 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 // Then
                 assertThat(response).isNotNull();
-                assertThat(response.getData()).isNull();
-                assertThat(response.getErrors()).isNotNull();
+                assertThat(response.getData()).isNotNull();
                 assertEquals(0, response.getErrors().size());
             }
 
             @Test
             void shouldReturnErrors_whenRespondent2AddressNotValid() {
                 // Given
-                Party respondent2 = Party.builder().primaryAddress(Address.builder().postCode(null).build()).build();
-
-                CaseData caseData = CaseData.builder().respondent2(respondent2).build();
+                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                    .respondent2(Party.builder().type(Party.Type.ORGANISATION)
+                        .primaryAddress(Address.builder()
+                            .addressLine1("Line 1 test again for more than 35 characters")
+                            .addressLine2("Line 1 test again for more than 35 characters")
+                            .addressLine3("Line 1 test again for more than 35 characters")
+                            .county("Line 1 test again for more than 35 characters")
+                            .postCode("PostCode test more than 8 characters")
+                            .postTown("Line 1 test again for more than 35 characters").build())
+                        .build()).build();
 
                 CallbackParams params = callbackParamsOf(caseData, MID, "respondent2");
-
-                given(postcodeValidator.validate(any()))
-                    .willReturn(List.of("Please enter Postcode"));
 
                 // When
                 AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
                     .handle(params);
 
                 // Then
-                assertThat(response).isNotNull();
-                assertThat(response.getData()).isNull();
-                assertThat(response.getErrors()).isNotNull();
-                assertEquals(1, response.getErrors().size());
-                assertEquals("Please enter Postcode", response.getErrors().get(0));
+                assertThat(response.getErrors()).isNotEmpty();
+                assertThat(response.getErrors()).hasSize(6);
             }
         }
 
@@ -1621,6 +1972,115 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
     }
 
     @Nested
+    class ValidatePartyName {
+
+        @Test
+        void shouldReturnErrors_whenRespondent1PartyNameNotValid() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .respondent1(Party.builder().type(Party.Type.ORGANISATION)
+                    .organisationName("Line 1 test again for more than 70 characters on the company party name")
+                    .primaryAddress(AddressBuilder.defaults().build())
+                    .build()).build();
+
+            CallbackParams params = callbackParamsOf(caseData, MID, "respondent1");
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+            assertThat(response.getErrors()).hasSize(1);
+        }
+
+        @Test
+        void shouldReturnErrors_whenRespondent2PartyNameNotValid() {
+            // Given
+            when(toggleService.isJudgmentOnlineLive()).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
+                .respondent2(Party.builder().type(Party.Type.INDIVIDUAL)
+                    .individualTitle("Title test again for more than 70 characters on the company party name")
+                    .individualFirstName("Line 1 test again for more than 70 characters on the company party name")
+                    .individualLastName("Line 1 test again for more than 70 characters on the company party name")
+                    .primaryAddress(AddressBuilder.defaults().build())
+                    .build()).build();
+
+            CallbackParams params = callbackParamsOf(caseData, MID, "respondent2");
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isNotEmpty();
+            assertThat(response.getErrors()).hasSize(1);
+        }
+    }
+
+    @Nested
+    class FlightDelayDetailsMidCallbacks {
+
+        @Test
+        void shouldGetAirlineList_whenRequired() {
+            // Given
+            List<AirlineEpimsId> airlineEpimsIDList = new ArrayList<>();
+            airlineEpimsIDList.add(AirlineEpimsId.builder().airline("BA/Cityflyer").epimsID("111000").build());
+            airlineEpimsIDList.add(AirlineEpimsId.builder().airline("OTHER").epimsID("111111").build());
+
+            given(airlineEpimsDataLoader.getAirlineEpimsIDList())
+                .willReturn(airlineEpimsIDList);
+
+            CaseData caseData = CaseData.builder().build();
+            CallbackParams params = callbackParamsOf(caseData, MID, "get-airline-list");
+
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getData()).extracting("flightDelayDetails").extracting("airlineList")
+                .extracting("list_items").asList().extracting("label")
+                .contains("BA/Cityflyer");
+
+            assertThat(response.getData()).extracting("flightDelayDetails").extracting("airlineList")
+                .extracting("list_items").asList().extracting("label")
+                .contains("OTHER");
+        }
+
+        @Test
+        void shouldReturnErrorWhenDateOfFlightIsInTheFuture() {
+            // Given
+            CaseData caseData = CaseData.builder()
+                .isFlightDelayClaim(YES)
+                .flightDelayDetails(FlightDelayDetails.builder().scheduledDate(now().plusDays(1)).build()).build();
+
+            CallbackParams params = callbackParamsOf(caseData, MID, "validateFlightDelayDate");
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).contains("Scheduled date of flight must be today or in the past");
+        }
+
+        @ParameterizedTest
+        @ValueSource(ints = {0, 1})
+        void shouldNotReturnErrorWhenDateOfFlightIsTodayOrInThePast(Integer days) {
+            // Given
+            CaseData caseData = CaseData.builder()
+                .isFlightDelayClaim(YES)
+                .flightDelayDetails(FlightDelayDetails.builder().scheduledDate(now().minusDays(days)).build()).build();
+
+            CallbackParams params = callbackParamsOf(caseData, MID, "validateFlightDelayDate");
+            // When
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getErrors()).isEmpty();
+        }
+    }
+
+    @Nested
     class AboutToSubmitCallbackV1 {
 
         private CallbackParams params;
@@ -1637,24 +2097,20 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             userId = UUID.randomUUID().toString();
 
-            given(idamClient.getUserDetails(any()))
+            given(userService.getUserDetails(any()))
                 .willReturn(UserDetails.builder().email(EMAIL).id(userId).build());
 
             given(time.now()).willReturn(submittedDate);
             given(toggleConfiguration.getFeatureToggle()).willReturn("WA 4");
             given(defendantPinToPostLRspecService.buildDefendantPinToPost())
                 .willReturn(DefendantPinToPostLRspec.builder()
-                                .accessCode(
-                                    AccessCodeGenerator.generateAccessCode())
-                                .respondentCaseRole(
-                                    CaseRole.RESPONDENTSOLICITORONE.getFormattedName())
-                                .expiryDate(LocalDate.now().plusDays(
-                                    180))
-                                .build());
-
-            Organisation organisation = Organisation.builder()
-                .paymentAccount(List.of("12345", "98765"))
-                .build();
+                    .accessCode(
+                        AccessCodeGenerator.generateAccessCode())
+                    .respondentCaseRole(
+                        CaseRole.RESPONDENTSOLICITORONE.getFormattedName())
+                    .expiryDate(LocalDate.now().plusDays(
+                        180))
+                    .build());
         }
 
         @Test
@@ -1664,16 +2120,16 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .code("FeeCode")
                 .calculatedAmountInPence(BigDecimal.valueOf(19990))
                 .build();
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .sdtRequestIdFromSdt("sdtRequestIdFromSdt")
                 .totalClaimAmount(BigDecimal.valueOf(1999))
                 .build();
             given(feesService.getFeeDataByTotalClaimAmount(any())).willReturn(feeData);
-            when(interestCalculator.calculateInterest(caseData)).thenReturn(new BigDecimal(0));
+            when(interestCalculator.calculateBulkInterest(localCaseData)).thenReturn(new BigDecimal(0));
             given(organisationService.findOrganisation(any())).willReturn(Optional.of(bulkOrganisation));
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
             assertThat(response.getData()).extracting("claimFee").extracting("calculatedAmountInPence", "code")
                 .containsExactly(String.valueOf(feeData.getCalculatedAmountInPence()), feeData.getCode());
@@ -1682,15 +2138,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAddSdtRequestId_whenInvokedAndBulkClaim() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .sdtRequestIdFromSdt("sdtRequestIdFromSdt")
                 .totalClaimAmount(BigDecimal.valueOf(1999))
                 .build();
-            when(interestCalculator.calculateInterest(caseData)).thenReturn(new BigDecimal(0));
+            when(interestCalculator.calculateBulkInterest(localCaseData)).thenReturn(new BigDecimal(0));
             given(organisationService.findOrganisation(any())).willReturn(Optional.of(bulkOrganisation));
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
             assertThat(response.getData()).extracting("sdtRequestId").asString().contains("sdtRequestIdFromSdt");
         }
@@ -1698,34 +2154,32 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldNotAddSdtRequestId_whenInvokedAndNotBulkClaim() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .build();
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
-            assertThat(response.getData()).extracting("sdtRequestId").isNull();
+            assertThat(response.getData()).doesNotHaveToString("sdtRequestId");
         }
 
         @Test
         void shouldAssignFirstPbaNumber_whenInvokedAndBulkClaim() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStatePendingClaimIssued().build().toBuilder()
                 .sdtRequestIdFromSdt("sdtRequestIdFromSdt")
                 .totalClaimAmount(BigDecimal.valueOf(1999))
                 .build();
-            when(interestCalculator.calculateInterest(caseData)).thenReturn(new BigDecimal(0));
+            when(interestCalculator.calculateBulkInterest(localCaseData)).thenReturn(new BigDecimal(0));
             given(organisationService.findOrganisation(any())).willReturn(Optional.of(bulkOrganisation));
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
             // Then
             System.out.println(response.getData().get("applicantSolicitor1PbaAccounts"));
             assertThat(response.getData()).extracting("applicantSolicitor1PbaAccounts").asString().contains("12345");
             assertThat(response.getData()).extracting("applicantSolicitor1PbaAccounts").asString().doesNotContain("98765");
         }
-
-        //TODO implement tests for bulk claims that have interest added.
 
         @Test
         void shouldSetCaseCategoryToSpec_whenInvoked() {
@@ -1737,8 +2191,6 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
         @Test
         void shouldAddPartyIdsToPartyFields_whenInvoked() {
-            when(toggleService.isHmcEnabled()).thenReturn(true);
-
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
             assertThat(response.getData()).extracting("applicant1").hasFieldOrProperty("partyID");
@@ -1746,26 +2198,20 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         }
 
         @Test
-        void shouldNotAddPartyIdsToPartyFields_whenInvokedWithHMCToggleOff() {
-            when(toggleService.isHmcEnabled()).thenReturn(false);
-
+        void shouldPopulateCasenamePublic_whenInvoked() {
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
-
-            assertThat(response.getData()).extracting("applicant1")
-                .isEqualTo(objMapper.convertValue(caseData.getApplicant1(), HashMap.class));
-            assertThat(response.getData()).extracting("respondent1")
-                .isEqualTo(objMapper.convertValue(caseData.getRespondent1(), HashMap.class));
+            assertThat(response.getData()).extracting("caseNamePublic").isEqualTo("'John Rambo' v 'Sole Trader'");
         }
 
         @Test
         void shouldAddCaseReferenceSubmittedDateAndAllocatedTrack_whenInvoked() {
             // Given
-            CallbackParams params = CallbackParamsBuilder.builder().of(ABOUT_TO_SUBMIT, caseData).request(
+            CallbackParams localParams = CallbackParamsBuilder.builder().of(ABOUT_TO_SUBMIT, caseData).request(
                     CallbackRequest.builder().eventId(CREATE_SERVICE_REQUEST_CLAIM.name()).build())
                 .build();
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
             assertThat(response.getData())
@@ -1795,15 +2241,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignCaseName1v2_whenCaseIs1v2() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimNotified_1v2_andNotifyBothSolicitors().build();
-            CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimNotified_1v2_andNotifyBothSolicitors().build();
+            CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
-            assertThat(response.getData().get("caseNameHmctsInternal"))
-                .isEqualTo("Mr. John Rambo v Mr. Sole Trader and Mr. John Rambo");
+            assertThat(response.getData())
+                .containsEntry("caseNameHmctsInternal", "'John Rambo' v 'Sole Trader', 'John Rambo'");
             assertThat(response.getData().get("caseManagementCategory")).extracting("value")
                 .extracting("code").isEqualTo("Civil");
         }
@@ -1811,15 +2257,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignCaseName2v1_whenCaseIs2v1() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimSubmitted2v1RespondentRegistered().build();
-            CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimSubmitted2v1RespondentRegistered().build();
+            CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
-            assertThat(response.getData().get("caseNameHmctsInternal"))
-                .isEqualTo("Mr. John Rambo and Mr. Jason Rambo v Mr. Sole Trader");
+            assertThat(response.getData())
+                .containsEntry("caseNameHmctsInternal", "'John Rambo', 'Jason Rambo' v 'Sole Trader'");
             assertThat(response.getData().get("caseManagementCategory")).extracting("value")
                 .extracting("code").isEqualTo("Civil");
         }
@@ -1827,15 +2273,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignCaseName1v1_whenCaseIs1v1() {
             // Given
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimNotified_1v1().build();
-            CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimNotified_1v1().build();
+            CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
             // When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
             // Then
             assertThat(response.getData().get("caseNameHmctsInternal"))
-                .isEqualTo("Mr. John Rambo v Mr. Sole Trader");
+                .isEqualTo("'John Rambo' v 'Sole Trader'");
             assertThat(response.getData().get("caseManagementCategory")).extracting("value")
                 .extracting("code").isEqualTo("Civil");
         }
@@ -1844,15 +2290,15 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldCopyRespondent1OrgPolicyReferenceForSameRegisteredSolicitorScenario_whenInvoked() {
             caseData = CaseDataBuilder.builder().atStateClaimIssued1v2AndSameRepresentative()
                 .respondent2(Party.builder()
-                                 .type(Party.Type.COMPANY)
-                                 .companyName("Company 3")
-                                 .build())
+                    .type(Party.Type.COMPANY)
+                    .companyName("Company 3")
+                    .build())
                 .build().toBuilder()
                 .specRespondentCorrespondenceAddressRequired(YES)
                 .specRespondentCorrespondenceAddressdetails(Address.builder()
-                                                                .postCode("Postcode")
-                                                                .addressLine1("Address")
-                                                                .build())
+                    .postCode("Postcode")
+                    .addressLine1("Address")
+                    .build())
                 .build();
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
                 callbackParamsOf(
@@ -1919,10 +2365,9 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             // Given
             var callbackParams = params.toBuilder()
                 .caseData(params.getCaseData().toBuilder()
-                              .respondent1OrganisationPolicy(null)
-                              .build())
+                    .respondent1OrganisationPolicy(null)
+                    .build())
                 .build();
-            when(toggleService.isNoticeOfChangeEnabled()).thenReturn(true);
 
             // When
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
@@ -1939,7 +2384,6 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             var callbackParams = params.toBuilder()
                 .caseData(params.getCaseData().toBuilder().build())
                 .build();
-            when(toggleService.isNoticeOfChangeEnabled()).thenReturn(true);
 
             // When
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParams);
@@ -1958,24 +2402,24 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 caseData = CaseDataBuilder.builder().atStateClaimDraft().build();
                 userId = UUID.randomUUID().toString();
 
-                given(idamClient.getUserDetails(any()))
+                given(userService.getUserDetails(any()))
                     .willReturn(UserDetails.builder().email(EMAIL).id(userId).build());
             }
 
             @Test
             void shouldAddIdamEmailToIdamDetails_whenIdamEmailIsCorrect() {
                 // Given
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                     .applicantSolicitor1CheckEmail(CorrectEmail.builder()
-                                                       .email(EMAIL)
-                                                       .correct(YES)
-                                                       .build())
+                        .email(EMAIL)
+                        .correct(YES)
+                        .build())
                     .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                                                        .email(DIFFERENT_EMAIL)
-                                                        .build())
+                        .email(DIFFERENT_EMAIL)
+                        .build())
                     .build();
 
-                params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+                params = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
                 // When
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -1995,23 +2439,23 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             void shouldAddDifferentEmailToIdamDetails_whenIdamEmailIsNotCorrect() {
                 // Given
                 userId = UUID.randomUUID().toString();
-                given(idamClient.getUserDetails(any()))
+                given(userService.getUserDetails(any()))
                     .willReturn(UserDetails.builder().email(EMAIL).id(userId).build());
 
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                     .applicantSolicitor1CheckEmail(CorrectEmail.builder()
-                                                       .email(EMAIL)
-                                                       .correct(NO)
-                                                       .build())
+                        .email(EMAIL)
+                        .correct(NO)
+                        .build())
                     .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                                                        .email(DIFFERENT_EMAIL)
-                                                        .build())
+                        .email(DIFFERENT_EMAIL)
+                        .build())
                     .build();
 
-                CallbackParams params = callbackParamsOf(V_1, caseData, ABOUT_TO_SUBMIT);
+                CallbackParams localParams = callbackParamsOf(V_1, localCaseData, ABOUT_TO_SUBMIT);
 
                 // When
-                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
                 // Then
                 assertThat(response.getData())
@@ -2058,117 +2502,75 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                     .doesNotHaveToString("role");
             }
         }
+
+        @Nested
+        class GetAirlineCourtLocation extends LocationRefSampleDataBuilder {
+
+            @BeforeEach
+            void mockAirlineEpimsData() {
+                given(airlineEpimsService.getEpimsIdForAirline("GULF_AIR"))
+                    .willReturn("36791");
+
+                List<LocationRefData> locations = new ArrayList<>();
+                locations.add(LocationRefData.builder().regionId("Site Name").epimmsId("36791")
+                    .build());
+                given(locationRefDataService.getCourtLocationsForDefaultJudgments(any()))
+                    .willReturn(locations);
+            }
+
+            @Test
+            void shouldReturnExpectedCourtLocation_whenAirlineExists() {
+                // Given
+
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft()
+                    .isFlightDelayClaim(YES)
+                    .flightDelay(FlightDelayDetails.builder()
+                        .airlineList(
+                            DynamicList.builder()
+                                .value(DynamicListElement.builder().code("GULF_AIR").label("Gulf Air")
+                                    .build()).build()).build()).build();
+                CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
+
+                // When
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
+
+                // Then
+                assertThat(response.getData()).extracting("flightDelayDetails").extracting("flightCourtLocation").extracting("region")
+                    .isEqualTo("Site Name");
+            }
+
+            @Test
+            void shouldReturnExpectedCourtLocation_whenOtherAirlineSelected() {
+                // Given
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft()
+                    .flightDelay(FlightDelayDetails.builder()
+                        .airlineList(
+                            DynamicList.builder()
+                                .value(DynamicListElement.builder().code("OTHER").label("OTHER")
+                                    .build()).build()).build()).build();
+                CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
+
+                given(locationRefDataService.getCourtLocationsForDefaultJudgments(any()))
+                    .willReturn(getSampleCourLocationsRefObject());
+
+                // When
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
+
+                // Then
+                assertThat(response.getData()).extracting("flightDelayDetails").doesNotHaveToString("flightCourtLocation");
+            }
+        }
     }
 
     @Nested
     class SubmittedCallback {
 
         @Nested
-        class Respondent1DoesNotHaveLegalRepresentation {
-
-            @Test
-            void shouldReturnExpectedSubmittedCallbackResponse_whenRespondent1DoesNotHaveRepresentation() {
-                // Given
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimIssuedUnrepresentedDefendants()
-                    .legacyCaseReference("000MC001")
-                    .build();
-                CallbackParams params = callbackParamsOf(caseData, SUBMITTED);
-
-                // When
-                SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
-
-                LocalDateTime serviceDeadline = now().plusDays(112).atTime(23, 59);
-
-                String body = format(
-                    LIP_CONFIRMATION_BODY,
-                    format("/cases/case-details/%s#CaseDocuments", CASE_ID),
-                    responsePackLink,
-                    formatLocalDateTime(serviceDeadline, DATE_TIME_AT)
-                ) + exitSurveyContentService.applicantSurvey();
-
-                // Then
-                assertThat(response).usingRecursiveComparison().isEqualTo(
-                    SubmittedCallbackResponse.builder()
-                        .confirmationHeader(format(
-                            "# Your claim has been received and will progress offline%n## Claim number: %s",
-                            REFERENCE_NUMBER
-                        ))
-                        .confirmationBody(body)
-                        .build());
-            }
-
-            @Test
-            void shouldReturnExpectedSubmittedCallbackResponse_whenRespondent1DoesNotHaveRepresentationAndPinPostEnabled() {
-                // Given
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimIssuedUnrepresentedDefendants()
-                    .legacyCaseReference("000MC001")
-                    .addRespondent2(NO)
-                    .addApplicant2(NO)
-                    .build();
-                CallbackParams params = callbackParamsOf(caseData, SUBMITTED);
-                Mockito.when(toggleService.isPinInPostEnabled()).thenReturn(true);
-
-                // When
-                SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
-
-                LocalDateTime serviceDeadline = now().plusDays(112).atTime(23, 59);
-
-                String body = format(
-                    CONFIRMATION_SUMMARY,
-                    format("/cases/case-details/%s#CaseDocuments", CASE_ID),
-                    responsePackLink,
-                    formatLocalDateTime(serviceDeadline, DATE_TIME_AT)
-                ) + exitSurveyContentService.applicantSurvey();
-
-                // Then
-                assertThat(response).usingRecursiveComparison().isEqualTo(
-                    SubmittedCallbackResponse.builder()
-                        .confirmationHeader(format(
-                            "# Your claim has been received%n## Claim number: %s",
-                            REFERENCE_NUMBER
-                        ))
-                        .confirmationBody(body)
-                        .build());
-            }
-        }
-
-        @Nested
         class Respondent1HasLegalRepresentation {
-
-            @Test
-            void shouldReturnExpectedSubmittedCallbackResponse_whenRespondent1HasRepresentation() {
-                // Given
-                Mockito.when(toggleService.isPbaV3Enabled()).thenReturn(false);
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
-                    .legacyCaseReference("000MC001")
-                    .build();
-                CallbackParams params = CallbackParamsBuilder.builder().of(SUBMITTED, caseData).request(
-                        CallbackRequest.builder().eventId(CREATE_CLAIM_SPEC.name()).build())
-                    .build();
-
-                // When
-                SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
-
-                String body = format(
-                    SPEC_CONFIRMATION_SUMMARY,
-                    format("/cases/case-details/%s#CaseDocuments", CASE_ID)
-                ) + exitSurveyContentService.applicantSurvey();
-
-                // Then
-                assertThat(response).usingRecursiveComparison().isEqualTo(
-                    SubmittedCallbackResponse.builder()
-                        .confirmationHeader(format(
-                            "# Your claim has been received%n## Claim number: %s",
-                            REFERENCE_NUMBER
-                        ))
-                        .confirmationBody(body)
-                        .build());
-            }
 
             @Test
             void shouldReturnExpectedSubmittedCallbackResponse_whenRespondent1HasRepresentationAndPBAv3IsOn() {
                 // Given
-                Mockito.when(toggleService.isPbaV3Enabled()).thenReturn(true);
                 CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                     .legacyCaseReference("000MC001")
                     .build();
@@ -2194,36 +2596,8 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             }
 
             @Test
-            void shouldReturnExpectedSubmittedCallbackResponse_whenRespondent1HasRepresentationAndEventIdMissing() {
-                // Given
-                Mockito.when(toggleService.isPbaV3Enabled()).thenReturn(false);
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
-                    .legacyCaseReference("000MC001")
-                    .build();
-                CallbackParams params = callbackParamsOf(caseData, SUBMITTED);
-
-                // When
-                SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
-                String body = format(
-                    CONFIRMATION_SUMMARY,
-                    format("/cases/case-details/%s#CaseDocuments", CASE_ID)
-                ) + exitSurveyContentService.applicantSurvey();
-
-                // Then
-                assertThat(response).usingRecursiveComparison().isEqualTo(
-                    SubmittedCallbackResponse.builder()
-                        .confirmationHeader(format(
-                            "# Your claim has been received%n## Claim number: %s",
-                            REFERENCE_NUMBER
-                        ))
-                        .confirmationBody(body)
-                        .build());
-            }
-
-            @Test
             void shouldReturnExpectedSubmittedCallbackResponse_whenRespondent1HasRepresentationAndPBAv3IsOnAndEventIdMissing() {
                 // Given
-                Mockito.when(toggleService.isPbaV3Enabled()).thenReturn(true);
                 CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                     .legacyCaseReference("000MC001")
                     .build();
@@ -2248,67 +2622,6 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             }
         }
 
-        @Nested
-        class Respondent1SolicitorOrgNotRegisteredInMyHmcts {
-
-            @Test
-            void shouldReturnExpectedSubmittedCallbackResponse_whenRespondent1SolicitorNotRegisteredInMyHmcts() {
-                // Given
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
-                    .respondent1Represented(YES)
-                    .respondent1OrgRegistered(NO)
-                    .legacyCaseReference("000MC001")
-                    .build();
-                CallbackParams params = callbackParamsOf(caseData, SUBMITTED);
-
-                // When
-                SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
-
-                // Then
-                assertThat(response).usingRecursiveComparison().isEqualTo(
-                    SubmittedCallbackResponse.builder()
-                        .confirmationHeader(format("# Your claim has been received and will progress offline%n## "
-                                                       + "Claim number: %s", REFERENCE_NUMBER))
-                        .confirmationBody(format(
-                            LIP_CONFIRMATION_SCREEN,
-                            format("/cases/case-details/%s#CaseDocuments", CASE_ID),
-                            responsePackLink
-                        ) + exitSurveyContentService.applicantSurvey())
-                        .build());
-            }
-        }
-
-        @Test
-        void shouldReturnExpectedConfirmationPage() {
-            // Given
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
-                .respondent1Represented(YES)
-                .respondent1OrgRegistered(NO)
-                .legacyCaseReference("000MC001")
-                .build();
-            CallbackParams params = CallbackParamsBuilder.builder().of(SUBMITTED, caseData).request(
-                    CallbackRequest.builder().eventId(CREATE_CLAIM_SPEC.name()).build())
-                .build();
-
-            // When
-            SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
-
-            // Then
-            assertThat(response).usingRecursiveComparison().isEqualTo(
-                SubmittedCallbackResponse.builder()
-                    .confirmationHeader(format("# Your claim has been received and will progress offline%n## "
-                                                   + "Claim number: %s", REFERENCE_NUMBER))
-                    .confirmationBody(format(
-                        SPEC_LIP_CONFIRMATION_SCREEN,
-                        format("/cases/case-details/%s#CaseDocuments", CASE_ID),
-                        responsePackLink,
-                        n9aLink,
-                        n9bLink,
-                        n215Link
-                    ) + exitSurveyContentService.applicantSurvey())
-                    .build());
-        }
-
         @Test
         void shouldReturnExpectedConfirmationPageForPBAV3AndNotRegisteredOrg() {
             // Given
@@ -2320,7 +2633,6 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             CallbackParams params = CallbackParamsBuilder.builder().of(SUBMITTED, caseData).request(
                     CallbackRequest.builder().eventId(CREATE_CLAIM_SPEC.name()).build())
                 .build();
-            when(toggleService.isPbaV3Enabled()).thenReturn(true);
             // When
             SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
 
@@ -2330,14 +2642,14 @@ class CreateClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                     .confirmationHeader(format("# Please now pay your claim fee%n# using the link below"))
                     .confirmationBody(
                         format(
-                        SPEC_LIP_CONFIRMATION_BODY_PBAV3,
-                        format("/cases/case-details/%s#Service%%20Request", caseData.getCcdCaseReference()),
-                        format("/cases/case-details/%s#CaseDocuments", CASE_ID),
-                        responsePackLink,
-                        n9aLink,
-                        n9bLink,
-                        n215Link
-                    ) + exitSurveyContentService.applicantSurvey())
+                            SPEC_LIP_CONFIRMATION_BODY_PBAV3,
+                            format("/cases/case-details/%s#Service%%20Request", caseData.getCcdCaseReference()),
+                            format("/cases/case-details/%s#CaseDocuments", CASE_ID),
+                            responsePackLink,
+                            n9aLink,
+                            n9bLink,
+                            n215Link
+                        ) + exitSurveyContentService.applicantSurvey())
                     .build());
         }
     }
