@@ -16,19 +16,24 @@ import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.config.ExitSurveyConfiguration;
-import uk.gov.hmcts.reform.civil.enums.AllocatedTrack;
+import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.enums.CaseRole;
 import uk.gov.hmcts.reform.civil.enums.dq.UnavailableDateType;
 import uk.gov.hmcts.reform.civil.handler.callback.BaseCallbackHandlerTest;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.respondtoclaimcallbackhandlertasks.AssembleDocumentsForDeadlineResponse;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.respondtoclaimcallbackhandlertasks.PopulateRespondentCopyObjects;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.respondtoclaimcallbackhandlertasks.UpdateDataRespondentDeadlineResponse;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.respondtoclaimcallbackhandlertasks.SetApplicantResponseDeadline;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.respondtoclaimcallbackhandlertasks.ValidateRespondentExperts;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.respondtoclaimcallbackhandlertasks.ValidateRespondentWitnesses;
+import uk.gov.hmcts.reform.civil.handler.callback.user.task.respondtoclaimcallbackhandlertasks.ValidateUnavailableDates;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
-import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.StatementOfTruth;
 import uk.gov.hmcts.reform.civil.model.UnavailableDate;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
 import uk.gov.hmcts.reform.civil.model.common.Element;
-import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.model.dq.Expert;
 import uk.gov.hmcts.reform.civil.model.dq.Experts;
 import uk.gov.hmcts.reform.civil.model.dq.Hearing;
@@ -44,14 +49,19 @@ import uk.gov.hmcts.reform.civil.sampledata.PartyBuilder;
 import uk.gov.hmcts.reform.civil.service.CoreCaseUserService;
 import uk.gov.hmcts.reform.civil.service.DeadlinesCalculator;
 import uk.gov.hmcts.reform.civil.service.ExitSurveyContentService;
+import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.Time;
 import uk.gov.hmcts.reform.civil.service.UserService;
-import uk.gov.hmcts.reform.civil.service.flowstate.StateFlowEngine;
-import uk.gov.hmcts.reform.civil.referencedata.LocationRefDataService;
+import uk.gov.hmcts.reform.civil.service.flowstate.IStateFlowEngine;
+import uk.gov.hmcts.reform.civil.service.flowstate.SimpleStateFlowEngine;
+import uk.gov.hmcts.reform.civil.service.flowstate.TransitionsTestConfiguration;
+import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
 import uk.gov.hmcts.reform.civil.stateflow.StateFlow;
+import uk.gov.hmcts.reform.civil.stateflow.simplegrammar.SimpleStateFlowBuilder;
 import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 import uk.gov.hmcts.reform.civil.utils.CaseFlagsInitialiser;
 import uk.gov.hmcts.reform.civil.utils.CourtLocationUtils;
+import uk.gov.hmcts.reform.civil.utils.FrcDocumentsUtils;
 import uk.gov.hmcts.reform.civil.validation.DateOfBirthValidator;
 import uk.gov.hmcts.reform.civil.validation.UnavailableDateValidator;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
@@ -60,10 +70,8 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 import static java.time.LocalDate.now;
@@ -98,6 +106,13 @@ import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(classes = {
     RespondToClaimCallbackHandler.class,
+    PopulateRespondentCopyObjects.class,
+    SetApplicantResponseDeadline.class,
+    UpdateDataRespondentDeadlineResponse.class,
+    AssembleDocumentsForDeadlineResponse.class,
+    ValidateRespondentWitnesses.class,
+    ValidateRespondentExperts.class,
+    ValidateUnavailableDates.class,
     ExitSurveyConfiguration.class,
     ExitSurveyContentService.class,
     JacksonAutoConfiguration.class,
@@ -105,10 +120,13 @@ import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
     DateOfBirthValidator.class,
     UnavailableDateValidator.class,
     CaseDetailsConverter.class,
-    LocationRefDataService.class,
+    LocationReferenceDataService.class,
     CourtLocationUtils.class,
-    StateFlowEngine.class,
-    AssignCategoryId.class
+    SimpleStateFlowEngine.class,
+    SimpleStateFlowBuilder.class,
+    TransitionsTestConfiguration.class,
+    AssignCategoryId.class,
+    FrcDocumentsUtils.class
 })
 class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
@@ -130,6 +148,9 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
     @Autowired
     private AssignCategoryId assignCategoryId;
 
+    @Autowired
+    private FrcDocumentsUtils frcDocumentsUtils;
+
     @MockBean
     private FeatureToggleService featureToggleService;
 
@@ -137,13 +158,13 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
     private CoreCaseUserService coreCaseUserService;
 
     @MockBean
-    private LocationRefDataService locationRefDataService;
+    private LocationReferenceDataService locationRefDataService;
 
     @MockBean
     private CourtLocationUtils courtLocationUtils;
 
     @MockBean
-    private StateFlowEngine stateFlowEngine;
+    private IStateFlowEngine stateFlowEngine;
 
     @Mock
     private StateFlow mockedStateFlow;
@@ -342,8 +363,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     .atStateClaimDetailsNotified()
                     .build().toBuilder()
                     .courtLocation(uk.gov.hmcts.reform.civil.model.CourtLocation.builder()
-                                       .applicantPreferredCourt("123")
-                                       .build())
+                        .applicantPreferredCourt("123")
+                        .build())
                     .build();
 
                 CallbackParams callbackParams = callbackParamsOf(caseData, ABOUT_TO_START);
@@ -356,7 +377,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 List<String> courtlist = dynamicList.getListItems().stream()
                     .map(DynamicListElement::getLabel)
-                    .collect(Collectors.toList());
+                    .toList();
                 //Then
                 assertThat(courtlist).containsOnly("Site 1 - Lane 1 - 123", "Site 2 - Lane 2 - 124");
                 assertThat(respondent1DQRequestedCourt.getOtherPartyPreferredSite())
@@ -383,7 +404,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 List<String> courtlist = dynamicList.getListItems().stream()
                     .map(DynamicListElement::getLabel)
-                    .collect(Collectors.toList());
+                    .toList();
                 //Then
                 assertThat(courtlist).containsOnly("Site 1 - Lane 1 - 123", "Site 2 - Lane 2 - 124");
             }
@@ -405,8 +426,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .respondent1(PartyBuilder.builder().individual()
-                                 .individualDateOfBirth(LocalDate.now().plusDays(1))
-                                 .build())
+                    .individualDateOfBirth(LocalDate.now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
             //When
@@ -420,8 +441,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .respondent1(PartyBuilder.builder().individual()
-                                 .soleTraderDateOfBirth(LocalDate.now().plusDays(1))
-                                 .build())
+                    .soleTraderDateOfBirth(LocalDate.now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
             //When
@@ -435,8 +456,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .respondent1(PartyBuilder.builder().individual()
-                                 .individualDateOfBirth(LocalDate.now().minusYears(1))
-                                 .build())
+                    .individualDateOfBirth(LocalDate.now().minusYears(1))
+                    .build())
                 .build();
 
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
@@ -451,8 +472,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Given
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .respondent1(PartyBuilder.builder().individual()
-                                 .soleTraderDateOfBirth(LocalDate.now().minusYears(1))
-                                 .build())
+                    .soleTraderDateOfBirth(LocalDate.now().minusYears(1))
+                    .build())
                 .build();
 
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
@@ -483,8 +504,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder().respondent1DQHearing(hearing).build())
@@ -507,8 +528,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimOneDefendantSolicitor()
@@ -533,8 +554,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimOneDefendantSolicitor()
@@ -561,8 +582,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimOneDefendantSolicitor()
@@ -586,8 +607,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimOneDefendantSolicitor()
@@ -612,8 +633,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimOneDefendantSolicitor()
@@ -637,8 +658,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimOneDefendantSolicitor()
@@ -663,8 +684,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimOneDefendantSolicitor()
@@ -688,8 +709,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder().respondent1DQHearing(hearing).build())
@@ -711,8 +732,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusYears(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusYears(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder().respondent1DQHearing(hearing).build())
@@ -732,8 +753,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().minusYears(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().minusYears(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder().respondent1DQHearing(hearing).build())
@@ -752,8 +773,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder().respondent1DQHearing(hearing).build())
@@ -814,9 +835,9 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimTwoDefendantSolicitors()
                 .respondent1DQ(Respondent1DQ
-                                   .builder().respondent1DQExperts(Experts.builder()
-                                                                       .expertRequired(NO)
-                                                                       .build()).build())
+                    .builder().respondent1DQExperts(Experts.builder()
+                        .expertRequired(NO)
+                        .build()).build())
                 .build().toBuilder().ccdCaseReference(1234L)
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
@@ -834,8 +855,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimTwoDefendantSolicitors()
                 .respondent2DQ(Respondent2DQ
-                                   .builder().respondent2DQExperts(Experts.builder().expertRequired(NO).build())
-                                   .build())
+                    .builder().respondent2DQExperts(Experts.builder().expertRequired(NO).build())
+                    .build())
                 .build().toBuilder().ccdCaseReference(1234L)
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
@@ -853,8 +874,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .multiPartyClaimOneDefendantSolicitor()
                 .respondent2DQ(Respondent2DQ
-                                   .builder().respondent2DQExperts(Experts.builder().expertRequired(NO).build())
-                                   .build())
+                    .builder().respondent2DQExperts(Experts.builder().expertRequired(NO).build())
+                    .build())
                 .respondent2SameLegalRepresentative(YES)
                 .respondentResponseIsSame(NO)
                 .build();
@@ -875,8 +896,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .multiPartyClaimOneDefendantSolicitor()
                 .respondent1DQ(Respondent1DQ
-                                   .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
-                                   .build())
+                    .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
+                    .build())
                 .respondent2SameLegalRepresentative(NO)
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
@@ -896,8 +917,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .multiPartyClaimOneDefendantSolicitor()
                 .respondent1DQ(Respondent1DQ
-                                   .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
-                                   .build())
+                    .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
+                    .build())
                 .respondent2SameLegalRepresentative(YES)
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
@@ -917,8 +938,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .multiPartyClaimOneDefendantSolicitor()
                 .respondent1DQ(Respondent1DQ
-                                   .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
-                                   .build())
+                    .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
+                    .build())
                 .respondent2SameLegalRepresentative(YES)
                 .respondentResponseIsSame(YES)
                 .build();
@@ -939,8 +960,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .multiPartyClaimOneDefendantSolicitor()
                 .respondent1DQ(Respondent1DQ
-                                   .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
-                                   .build())
+                    .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
+                    .build())
                 .respondent2SameLegalRepresentative(YES)
                 .respondentResponseIsSame(NO)
                 .build();
@@ -961,10 +982,10 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .multiPartyClaimOneDefendantSolicitor()
                 .respondent2DQ(Respondent2DQ
-                                   .builder().build())
+                    .builder().build())
                 .respondent1DQ(Respondent1DQ
-                                   .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
-                                   .build())
+                    .builder().respondent1DQExperts(Experts.builder().expertRequired(NO).build())
+                    .build())
                 .respondent2SameLegalRepresentative(YES)
                 .respondentResponseIsSame(NO)
                 .build();
@@ -982,10 +1003,10 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Given
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder()
-                                   .respondent1DQExperts(Experts.builder()
-                                                             .expertRequired(YES)
-                                                             .build())
-                                   .build())
+                    .respondent1DQExperts(Experts.builder()
+                        .expertRequired(YES)
+                        .build())
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -1000,12 +1021,12 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Given
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder()
-                                   .respondent1DQExperts(Experts.builder()
-                                                             .expertRequired(YES)
-                                                             .details(wrapElements(Expert.builder()
-                                                                                       .name("test expert").build()))
-                                                             .build())
-                                   .build())
+                    .respondent1DQExperts(Experts.builder()
+                        .expertRequired(YES)
+                        .details(wrapElements(Expert.builder()
+                            .name("test expert").build()))
+                        .build())
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
             //When
@@ -1019,10 +1040,10 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Given
             CaseData caseData = CaseDataBuilder.builder()
                 .respondent1DQ(Respondent1DQ.builder()
-                                   .respondent1DQExperts(Experts.builder()
-                                                             .expertRequired(NO)
-                                                             .build())
-                                   .build())
+                    .respondent1DQExperts(Experts.builder()
+                        .expertRequired(NO)
+                        .build())
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
             //When
@@ -1267,8 +1288,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void setup() {
             when(time.now()).thenReturn(responseDate);
             when(deadlinesCalculator.calculateApplicantResponseDeadline(
-                any(LocalDateTime.class),
-                any(AllocatedTrack.class)
+                any(LocalDateTime.class)
             )).thenReturn(deadline);
 
             when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
@@ -1279,7 +1299,6 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldPopulateRespondent2Flag_WhenInvoked() {
             // Given
-            given(featureToggleService.isCaseFileViewEnabled()).willReturn(true);
             given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).willReturn(true);
             given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORONE))).willReturn(false);
             CaseData caseData = CaseDataBuilder.builder()
@@ -1299,7 +1318,6 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldNotPopulateRespondent2Flag_WhenInvokedAndNoUser() {
             // Given
-            given(featureToggleService.isCaseFileViewEnabled()).willReturn(true);
             given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).willReturn(false);
             given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORONE))).willReturn(false);
             CaseData caseData = CaseDataBuilder.builder()
@@ -1319,7 +1337,6 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldNotPopulateRespondent2Flag_WhenInvoked() {
             // Given
-            given(featureToggleService.isCaseFileViewEnabled()).willReturn(true);
             given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).willReturn(true);
             given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORONE))).willReturn(true);
             CaseData caseData = CaseDataBuilder.builder()
@@ -1346,8 +1363,6 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .respondent1Copy(PartyBuilder.builder().individual().build())
                 .build();
 
-            when(featureToggleService.isHmcEnabled()).thenReturn(true);
-
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             //When
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -1355,30 +1370,6 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             assertThat(response.getData()).extracting("applicant1").hasFieldOrProperty("partyID");
             assertThat(response.getData()).extracting("respondent1").hasFieldOrProperty("partyID");
             assertThat(response.getData()).extracting("respondent2").hasFieldOrProperty("partyID");
-        }
-
-        @Test
-        void shouldNotAddPartyIdsToPartyFields_whenInvokedWithHMCToggleOff() {
-            //Given
-            CaseData caseData = CaseDataBuilder.builder()
-                .multiPartyClaimOneDefendantSolicitor()
-                .atStateRespondentFullDefenceAfterNotificationAcknowledgement()
-                .respondentResponseIsSame(YES)
-                .respondent1Copy(PartyBuilder.builder().individual().build())
-                .build();
-
-            when(featureToggleService.isHmcEnabled()).thenReturn(false);
-
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-            //When
-            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
-            //Then
-            assertThat(response.getData()).extracting("applicant1")
-                .isEqualTo(objectMapper.convertValue(caseData.getApplicant1(), HashMap.class));
-            assertThat(response.getData()).extracting("respondent1")
-                .isEqualTo(objectMapper.convertValue(caseData.getRespondent1(), HashMap.class));
-            assertThat(response.getData()).extracting("respondent2")
-                .isEqualTo(objectMapper.convertValue(caseData.getRespondent2(), HashMap.class));
         }
 
         @Test
@@ -1510,13 +1501,13 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .addRespondent2(NO)
                 .respondent2SameLegalRepresentative(NO)
                 .respondent1Copy(PartyBuilder.builder()
-                                     .individual()
-                                     .legalRepHeading()
-                                     .build())
+                    .individual()
+                    .legalRepHeading()
+                    .build())
                 .respondent2Copy(PartyBuilder.builder()
-                                     .individual()
-                                     .legalRepHeading()
-                                     .build())
+                    .individual()
+                    .legalRepHeading()
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             //When
@@ -1570,13 +1561,13 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .addRespondent2(YES)
                 .respondent2SameLegalRepresentative(NO)
                 .respondent1Copy(PartyBuilder.builder()
-                                     .individual()
-                                     .legalRepHeading()
-                                     .build())
+                    .individual()
+                    .legalRepHeading()
+                    .build())
                 .respondent2Copy(PartyBuilder.builder()
-                                     .individual()
-                                     .legalRepHeading()
-                                     .build())
+                    .individual()
+                    .legalRepHeading()
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             //When
@@ -1634,8 +1625,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .multiPartyClaimOneDefendantSolicitor()
                 .atStateClaimSubmitted()
                 .respondent1(PartyBuilder.builder().individual()
-                                 .individualDateOfBirth(LocalDate.now().minusYears(1))
-                                 .build())
+                    .individualDateOfBirth(LocalDate.now().minusYears(1))
+                    .build())
                 .respondent1ClaimResponseType(FULL_DEFENCE)
                 .respondent2ClaimResponseType(FULL_DEFENCE)
                 .respondent1DQ(
@@ -1664,28 +1655,6 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .extracting("businessProcess")
                 .extracting("camundaEvent", "status")
                 .containsExactly(DEFENDANT_RESPONSE.name(), "READY");
-        }
-
-        @Test
-        void shouldSetApplicantResponseDeadline_emptyPrimaryAddress() {
-            //Given
-            when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORONE))).thenReturn(true);
-            when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(true);
-            CaseData caseData = CaseDataBuilder.builder()
-                .multiPartyClaimOneDefendantSolicitor()
-                .atStateRespondentFullDefence_1v2_BothPartiesFullDefenceResponses()
-                .respondentResponseIsSame(NO)
-                .respondent1Copy(PartyBuilder.builder().individualNoPrimaryAddress("john").build())
-                .respondent2Copy(PartyBuilder.builder().individual().build())
-                .build();
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-            //When
-            IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> handler.handle(params)
-            );
-            //Then
-            assertEquals(exception.getMessage(), "Primary Address cannot be empty");
         }
 
         @Test
@@ -1816,7 +1785,6 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldAssignCategoryId_whenInvoked() {
             //Given
-            when(featureToggleService.isCaseFileViewEnabled()).thenReturn(true);
             when(time.now()).thenReturn(LocalDateTime.of(2022, 2, 18, 12, 10, 55));
             when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(false);
             CaseData caseData = CaseDataBuilder.builder()
@@ -1875,10 +1843,10 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .build().toBuilder()
                 .build();
             var beforeCaseData = Map.of("solicitorReferences",
-                                        Map.of("applicantSolicitor1Reference", "12345",
-                                               "respondentSolicitor1Reference", "6789"
-                                        ),
-                                        "respondentSolicitor2Reference", "01234"
+                Map.of("applicantSolicitor1Reference", "12345",
+                    "respondentSolicitor1Reference", "6789"
+                ),
+                "respondentSolicitor2Reference", "01234"
             );
 
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT, beforeCaseData);
@@ -2045,8 +2013,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimTwoApplicants()
@@ -2086,8 +2054,8 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             Hearing hearing = Hearing.builder()
                 .unavailableDatesRequired(YES)
                 .unavailableDates(wrapElements(UnavailableDate.builder()
-                                                   .unavailableDateType(UnavailableDateType.SINGLE_DATE)
-                                                   .date(now().plusDays(5)).build()))
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(now().plusDays(5)).build()))
                 .build();
             CaseData caseData = CaseDataBuilder.builder()
                 .multiPartyClaimTwoApplicants()
@@ -2249,7 +2217,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                                 RequestedCourt.builder()
                                     .responseCourtLocations(DynamicList.fromList(
                                         Collections.singletonList(locationA),
-                                        LocationRefDataService::getDisplayEntry,
+                                        LocationReferenceDataService::getDisplayEntry,
                                         locationA,
                                         false
                                     ))
@@ -2262,7 +2230,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
@@ -2282,10 +2250,10 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 void shouldHandleCourtLocationData_SameResponse() {
                     //Given
                     when(coreCaseUserService.userHasCaseRole(any(), any(),
-                                                             eq(RESPONDENTSOLICITORONE)
+                        eq(RESPONDENTSOLICITORONE)
                     )).thenReturn(true);
                     when(coreCaseUserService.userHasCaseRole(any(), any(),
-                                                             eq(RESPONDENTSOLICITORTWO)
+                        eq(RESPONDENTSOLICITORTWO)
                     )).thenReturn(true);
 
                     LocationRefData locationA = LocationRefData.builder()
@@ -2305,7 +2273,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                                 RequestedCourt.builder()
                                     .responseCourtLocations(DynamicList.fromList(
                                         Collections.singletonList(locationA),
-                                        LocationRefDataService::getDisplayEntry,
+                                        LocationReferenceDataService::getDisplayEntry,
                                         locationA,
                                         false
                                     ))
@@ -2318,7 +2286,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
@@ -2335,10 +2303,10 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 void shouldHandleCourtLocationData_DifferentResponse() {
                     //Given
                     when(coreCaseUserService.userHasCaseRole(any(), any(),
-                                                             eq(RESPONDENTSOLICITORONE)
+                        eq(RESPONDENTSOLICITORONE)
                     )).thenReturn(true);
                     when(coreCaseUserService.userHasCaseRole(any(), any(),
-                                                             eq(RESPONDENTSOLICITORTWO)
+                        eq(RESPONDENTSOLICITORTWO)
                     )).thenReturn(true);
 
                     LocationRefData locationA = LocationRefData.builder()
@@ -2358,7 +2326,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                                     .responseCourtLocations(
                                         DynamicList.fromList(
                                             Collections.singletonList(locationA),
-                                            LocationRefDataService::getDisplayEntry,
+                                            LocationReferenceDataService::getDisplayEntry,
                                             locationA,
                                             false
                                         ))
@@ -2368,7 +2336,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                                 RequestedCourt.builder()
                                     .responseCourtLocations(DynamicList.fromList(
                                         Collections.singletonList(locationA),
-                                        LocationRefDataService::getDisplayEntry,
+                                        LocationReferenceDataService::getDisplayEntry,
                                         locationA,
                                         false
                                     ))
@@ -2381,7 +2349,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
@@ -2395,7 +2363,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                     assertThat(response.getData())
                         .extracting("respondent2DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent2DQRequestedCourt")
@@ -2433,7 +2401,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                                     .responseCourtLocations(
                                         DynamicList.fromList(
                                             Collections.singletonList(locationA),
-                                            LocationRefDataService::getDisplayEntry,
+                                            LocationReferenceDataService::getDisplayEntry,
                                             locationA,
                                             false
                                         )
@@ -2449,7 +2417,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent2DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent2DQRequestedCourt")
@@ -2487,7 +2455,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent2DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                 }
 
@@ -2515,7 +2483,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent2DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                 }
 
@@ -2523,7 +2491,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 void shouldHandleCourtLocationData_when1stRespondentAnsweringBefore2nd() {
                     //Given
                     when(coreCaseUserService.userHasCaseRole(any(), any(),
-                                                             eq(RESPONDENTSOLICITORONE)
+                        eq(RESPONDENTSOLICITORONE)
                     )).thenReturn(true);
 
                     LocationRefData locationA = LocationRefData.builder()
@@ -2541,7 +2509,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                                 RequestedCourt.builder()
                                     .responseCourtLocations(DynamicList.fromList(
                                         Collections.singletonList(locationA),
-                                        LocationRefDataService::getDisplayEntry,
+                                        LocationReferenceDataService::getDisplayEntry,
                                         locationA,
                                         false
                                     ))
@@ -2555,7 +2523,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
@@ -2572,7 +2540,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 void shouldHandleCourtLocationData_when1stRespondentWithNoDynamicValForCourtLocation() {
                     //Given
                     when(coreCaseUserService.userHasCaseRole(any(), any(),
-                                                             eq(RESPONDENTSOLICITORONE)
+                        eq(RESPONDENTSOLICITORONE)
                     )).thenReturn(true);
 
                     CaseData caseData = CaseDataBuilder.builder()
@@ -2594,7 +2562,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
                 }
             }
 
@@ -2618,16 +2586,15 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("caseLocation")
-                        .isNull();
+                        .doesNotHaveToString("caseLocation");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtCode").isNull();
+                        .doesNotHaveToString("responseCourtCode");
                 }
 
                 @Test
@@ -2650,16 +2617,15 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     //Then
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtLocations").isNull();
+                        .doesNotHaveToString("responseCourtLocations");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("caseLocation")
-                        .isNull();
+                        .doesNotHaveToString("caseLocation");
 
                     assertThat(response.getData())
                         .extracting("respondent1DQRequestedCourt")
-                        .extracting("responseCourtCode").isNull();
+                        .doesNotHaveToString("responseCourtCode");
                 }
             }
         }
@@ -2686,7 +2652,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                             + "The Claimant has until %s to discontinue or proceed with this claim",
                         formatLocalDateTime(APPLICANT_RESPONSE_DEADLINE, DATE)
                     )
-                                          + exitSurveyContentService.respondentSurvey())
+                        + exitSurveyContentService.respondentSurvey())
                     .build());
         }
 
@@ -2706,9 +2672,9 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     .confirmationHeader(
                         format("# You have submitted the Defendant's defence%n## Claim number: 000DC001"))
                     .confirmationBody("Once the other defendant's legal representative has submitted their defence, "
-                                          + "we will send the claimant's legal representative a notification. "
-                                          + "You will receive a copy of this notification, as it will include details "
-                                          + "of when the claimant must respond.")
+                        + "we will send the claimant's legal representative a notification. "
+                        + "You will receive a copy of this notification, as it will include details "
+                        + "of when the claimant must respond.")
                     .build());
         }
 
@@ -2733,7 +2699,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                             + "The Claimant has until %s to discontinue or proceed with this claim",
                         formatLocalDateTime(APPLICANT_RESPONSE_DEADLINE, DATE)
                     )
-                                          + exitSurveyContentService.respondentSurvey())
+                        + exitSurveyContentService.respondentSurvey())
                     .build());
         }
     }
@@ -3078,7 +3044,7 @@ class RespondToClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             //Then
             assertThat(response.getErrors())
                 .containsExactly("It is not possible to respond for both defendants with Reject all of the claim. "
-                                     + "Please go back and select single response option.");
+                    + "Please go back and select single response option.");
         }
 
         @Test
