@@ -9,11 +9,15 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.Spy;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
+import org.springframework.boot.autoconfigure.validation.ValidationAutoConfiguration;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
@@ -21,7 +25,9 @@ import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CallbackType;
+import uk.gov.hmcts.reform.civil.config.ExitSurveyConfiguration;
 import uk.gov.hmcts.reform.civil.constants.SpecJourneyConstantLRSpec;
+import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.Document;
 import uk.gov.hmcts.reform.civil.enums.AllocatedTrack;
 import uk.gov.hmcts.reform.civil.enums.CaseRole;
@@ -30,6 +36,7 @@ import uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpec;
 import uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpecPaidStatus;
 import uk.gov.hmcts.reform.civil.enums.TimelineUploadTypeSpec;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
+import uk.gov.hmcts.reform.civil.enums.dq.UnavailableDateType;
 import uk.gov.hmcts.reform.civil.handler.callback.BaseCallbackHandlerTest;
 import uk.gov.hmcts.reform.civil.handler.callback.user.spec.RespondToClaimConfirmationHeaderSpecGenerator;
 import uk.gov.hmcts.reform.civil.handler.callback.user.spec.RespondToClaimConfirmationTextSpecGenerator;
@@ -45,6 +52,7 @@ import uk.gov.hmcts.reform.civil.handler.callback.user.spec.response.confirmatio
 import uk.gov.hmcts.reform.civil.handler.callback.user.spec.response.confirmation.header.SpecResponse1v2DivergentHeaderText;
 import uk.gov.hmcts.reform.civil.handler.callback.user.spec.response.confirmation.header.SpecResponse2v1DifferentHeaderText;
 import uk.gov.hmcts.reform.civil.handler.callback.user.spec.show.DefendantResponseShowTag;
+import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.helpers.DateFormatHelper;
 import uk.gov.hmcts.reform.civil.model.Address;
 import uk.gov.hmcts.reform.civil.model.CaseData;
@@ -55,16 +63,18 @@ import uk.gov.hmcts.reform.civil.model.ResponseDocument;
 import uk.gov.hmcts.reform.civil.model.UnavailableDate;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.Element;
+import uk.gov.hmcts.reform.civil.model.dq.ExpertDetails;
 import uk.gov.hmcts.reform.civil.model.dq.RequestedCourt;
 import uk.gov.hmcts.reform.civil.model.dq.Respondent1DQ;
 import uk.gov.hmcts.reform.civil.model.dq.Respondent2DQ;
 import uk.gov.hmcts.reform.civil.model.dq.SmallClaimHearing;
 import uk.gov.hmcts.reform.civil.model.dq.Witness;
 import uk.gov.hmcts.reform.civil.model.dq.Witnesses;
-import uk.gov.hmcts.reform.civil.referencedata.LocationRefDataService;
+import uk.gov.hmcts.reform.civil.model.mediation.MediationAvailability;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.sampledata.AddressBuilder;
 import uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder;
+import uk.gov.hmcts.reform.civil.sampledata.DocumentBuilder;
 import uk.gov.hmcts.reform.civil.sampledata.PartyBuilder;
 import uk.gov.hmcts.reform.civil.service.CoreCaseUserService;
 import uk.gov.hmcts.reform.civil.service.DeadlinesCalculator;
@@ -72,13 +82,18 @@ import uk.gov.hmcts.reform.civil.service.ExitSurveyContentService;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.Time;
 import uk.gov.hmcts.reform.civil.service.UserService;
+import uk.gov.hmcts.reform.civil.service.citizenui.responsedeadline.DeadlineExtensionCalculatorService;
 import uk.gov.hmcts.reform.civil.service.flowstate.FlowFlag;
-import uk.gov.hmcts.reform.civil.service.flowstate.StateFlowEngine;
+import uk.gov.hmcts.reform.civil.service.flowstate.SimpleStateFlowEngine;
+import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
 import uk.gov.hmcts.reform.civil.stateflow.StateFlow;
+import uk.gov.hmcts.reform.civil.stateflow.simplegrammar.SimpleStateFlowBuilder;
 import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 import uk.gov.hmcts.reform.civil.utils.CaseFlagsInitialiser;
 import uk.gov.hmcts.reform.civil.utils.CourtLocationUtils;
+import uk.gov.hmcts.reform.civil.utils.DQResponseDocumentUtils;
 import uk.gov.hmcts.reform.civil.utils.ElementUtils;
+import uk.gov.hmcts.reform.civil.utils.FrcDocumentsUtils;
 import uk.gov.hmcts.reform.civil.utils.MonetaryConversions;
 import uk.gov.hmcts.reform.civil.validation.DateOfBirthValidator;
 import uk.gov.hmcts.reform.civil.validation.PaymentDateValidator;
@@ -93,17 +108,19 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 import java.util.stream.Stream;
 
 import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_START;
@@ -115,8 +132,11 @@ import static uk.gov.hmcts.reform.civil.enums.CaseCategory.SPEC_CLAIM;
 import static uk.gov.hmcts.reform.civil.enums.CaseRole.APPLICANTSOLICITORONE;
 import static uk.gov.hmcts.reform.civil.enums.CaseRole.RESPONDENTSOLICITORONE;
 import static uk.gov.hmcts.reform.civil.enums.CaseRole.RESPONDENTSOLICITORTWO;
+import static uk.gov.hmcts.reform.civil.enums.DocCategory.DQ_DEF1;
+import static uk.gov.hmcts.reform.civil.enums.DocCategory.DQ_DEF2;
 import static uk.gov.hmcts.reform.civil.enums.RespondentResponsePartAdmissionPaymentTimeLRspec.IMMEDIATELY;
 import static uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpec.FULL_ADMISSION;
+import static uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpec.FULL_DEFENCE;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.helpers.DateFormatHelper.DATE;
@@ -124,44 +144,69 @@ import static uk.gov.hmcts.reform.civil.helpers.DateFormatHelper.formatLocalDate
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.unwrapElements;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@ExtendWith(MockitoExtension.class)
+@ExtendWith(SpringExtension.class)
+@SpringBootTest(classes = {
+    RespondToClaimSpecCallbackHandler.class,
+    ExitSurveyConfiguration.class,
+    ExitSurveyContentService.class,
+    JacksonAutoConfiguration.class,
+    ValidationAutoConfiguration.class,
+    DateOfBirthValidator.class,
+    UnavailableDateValidator.class,
+    CaseDetailsConverter.class,
+    LocationReferenceDataService.class,
+    CourtLocationUtils.class,
+    SimpleStateFlowEngine.class,
+    SimpleStateFlowBuilder.class,
+    AssignCategoryId.class,
+    FrcDocumentsUtils.class
+})
 class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
-    @InjectMocks
+    @Autowired
     private RespondToClaimSpecCallbackHandler handler;
-
-    @Mock
+    @Autowired
+    private ObjectMapper objectMapper;
+    @MockBean
     private Time time;
-    @Mock
+    @MockBean
     private PaymentDateValidator validator;
-    @Mock
+    @MockBean
     private UnavailableDateValidator dateValidator;
-    @Mock
+    @Autowired
     private ExitSurveyContentService exitSurveyContentService;
-    @Mock
+    @MockBean
     private FeatureToggleService toggleService;
-    @Mock
+    @MockBean
     private PostcodeValidator postcodeValidator;
-    @Mock
+    @MockBean
     private DeadlinesCalculator deadlinesCalculator;
-    @Mock
+    @Autowired
     private UserService userService;
-    @Mock
+    @MockBean
     private CoreCaseUserService coreCaseUserService;
     @Mock
     private StateFlow mockedStateFlow;
-    @Mock
-    private StateFlowEngine stateFlowEngine;
+    @MockBean
+    private SimpleStateFlowEngine stateFlowEngine;
+    @MockBean
+    private SimpleStateFlowBuilder simpleStateFlowBuilder;
     @Mock
     private DateOfBirthValidator dateOfBirthValidator;
-    @Mock
-    private LocationRefDataService locationRefDataService;
-    @Mock
+    @MockBean
+    private LocationReferenceDataService locationRefDataService;
+    @Autowired
     private AssignCategoryId assignCategoryId;
-    @Mock
+    @MockBean
     private CourtLocationUtils courtLocationUtils;
-    @Mock
+    @MockBean
     private CaseFlagsInitialiser caseFlagsInitialiser;
+    @MockBean
+    private DeadlineExtensionCalculatorService deadlineExtensionCalculatorService;
+    @MockBean
+    private DQResponseDocumentUtils dqResponseDocumentUtils;
+    @Autowired
+    private FrcDocumentsUtils frcDocumentsUtils;
 
     @Spy
     private List<RespondToClaimConfirmationTextSpecGenerator> confirmationTextGenerators = List.of(
@@ -184,14 +229,13 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
 
     @BeforeEach
     public void setup() {
-        ReflectionTestUtils.setField(handler, "objectMapper", new ObjectMapper().registerModule(new JavaTimeModule())
+        ReflectionTestUtils.setField(handler, "objectMapper", new ObjectMapper()
+            .registerModule(new JavaTimeModule())
             .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS));
-        ReflectionTestUtils.setField(handler, "confirmationTextSpecGenerators",
-                                     confirmationTextGenerators
-        );
-        ReflectionTestUtils.setField(handler, "confirmationHeaderGenerators",
-                                     confirmationHeaderSpecGenerators
-        );
+        ReflectionTestUtils.setField(handler, "confirmationTextSpecGenerators", confirmationTextGenerators);
+        ReflectionTestUtils.setField(handler, "confirmationHeaderGenerators", confirmationHeaderSpecGenerators);
+
+        when(dqResponseDocumentUtils.buildClaimantResponseDocuments(any(CaseData.class))).thenReturn(new ArrayList<>());
     }
 
     @Test
@@ -625,6 +669,38 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         }
 
         @Test
+        public void shouldSetIntermediateAllocatedTrack_whenInvoked() {
+            // New multi and intermediate track change track logic
+            // total claim amount is 100000, so track is intermediate, as this is the upper limit
+            when(toggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
+            CaseData caseData = CaseDataBuilder.builder().atStateRespondentFullDefenceFastTrack()
+                .totalClaimAmount(BigDecimal.valueOf(100000))
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, "track", "DEFENDANT_RESPONSE_SPEC");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+            // Then
+            assertThat(response.getData().get("responseClaimTrack")).isEqualTo(AllocatedTrack.INTERMEDIATE_CLAIM.name());
+        }
+
+        @Test
+        public void shouldSetMultiAllocatedTrack_whenInvoked() {
+            // New multi and intermediate track change track logic
+            // total claim amount is 100001, so track is multi
+            when(toggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
+            CaseData caseData = CaseDataBuilder.builder().atStateRespondentFullDefenceFastTrack()
+                .totalClaimAmount(BigDecimal.valueOf(100001))
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, MID, "track", "DEFENDANT_RESPONSE_SPEC");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+            // Then
+            assertThat(response.getData().get("responseClaimTrack")).isEqualTo(AllocatedTrack.MULTI_CLAIM.name());
+        }
+
+        @Test
         public void testValidateLengthOfUnemploymentWithError() {
             // Given
             CaseData caseData = CaseDataBuilder.builder().generateYearsAndMonthsIncorrectInput().build();
@@ -724,7 +800,7 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .build();
 
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-            when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any(), any()))
+            when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any()))
                 .thenReturn(LocalDateTime.now());
 
             // When
@@ -743,6 +819,147 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .extracting("AddressLine3").isEqualTo(changedAddress.getAddressLine3());
         }
 
+        @Nested
+        class UpdateExperts {
+            @Test
+            void updateRespondent1Experts() {
+                // Given
+                when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+                when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+                when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+                when(time.now()).thenReturn(LocalDateTime.of(2022, 2, 18, 12, 10, 55));
+
+                ExpertDetails experts = ExpertDetails.builder()
+                    .expertName("Mr Expert Defendant")
+                    .firstName("Expert")
+                    .lastName("Defendant")
+                    .phoneNumber("07123456789")
+                    .emailAddress("test@email.com")
+                    .fieldofExpertise("Roofing")
+                    .estimatedCost(new BigDecimal(434))
+                    .build();
+
+                CaseData caseData = CaseDataBuilder.builder()
+                    .respondent1(PartyBuilder.builder().individual().build())
+                    .atStateApplicantRespondToDefenceAndProceed()
+                    .respondent1DQSmallClaimExperts(experts, YES)
+                    .atSpecAoSApplicantCorrespondenceAddressRequired(NO)
+                    .atSpecAoSApplicantCorrespondenceAddressDetails(AddressBuilder.maximal().build())
+                    .build();
+
+                CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+                when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any()))
+                    .thenReturn(LocalDateTime.now());
+
+                // When
+                AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                    .handle(params);
+
+                // Then
+                assertThat(response.getData())
+                    .extracting("responseClaimExpertSpecRequired").isEqualTo("Yes");
+                assertThat(response.getData()).extracting("respondent1DQExperts").extracting("expertRequired").isEqualTo("Yes");
+            }
+
+            @Test
+            void updateRespondent1Experts_WhenNoExperts() {
+                // Given
+                when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+                when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+                when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+
+                CaseData caseData = CaseDataBuilder.builder()
+                    .respondent1(PartyBuilder.builder().individual().build())
+                    .atStateApplicantRespondToDefenceAndProceed()
+                    .respondent1DQSmallClaimExperts(null, NO)
+                    .atSpecAoSApplicantCorrespondenceAddressRequired(NO)
+                    .atSpecAoSApplicantCorrespondenceAddressDetails(AddressBuilder.maximal().build())
+                    .build();
+
+                CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+                when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any()))
+                    .thenReturn(LocalDateTime.now());
+
+                // When
+                AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                    .handle(params);
+
+                // Then
+                assertThat(response.getData())
+                    .extracting("responseClaimExpertSpecRequired").isEqualTo("No");
+                assertThat(response.getData()).extracting("respondent1DQExperts").extracting("expertRequired").isEqualTo("No");
+            }
+
+            @Test
+            void updateRespondent2Experts() {
+                // Given
+                when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+                when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+                when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+                when(time.now()).thenReturn(LocalDateTime.of(2022, 2, 18, 12, 10, 55));
+                when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(true);
+
+                ExpertDetails experts = ExpertDetails.builder()
+                    .expertName("Mr Expert Defendant")
+                    .firstName("Expert")
+                    .lastName("Defendant")
+                    .phoneNumber("07123456789")
+                    .emailAddress("test@email.com")
+                    .fieldofExpertise("Roofing")
+                    .estimatedCost(new BigDecimal(434))
+                    .build();
+
+                CaseData caseData = CaseDataBuilder.builder()
+                    .respondent2(PartyBuilder.builder().individual().build())
+                    .multiPartyClaimTwoDefendantSolicitors()
+                    .atStateApplicantRespondToDefenceAndProceed()
+                    .respondent2DQSmallClaimExperts(experts, YES)
+                    .atSpecAoSApplicantCorrespondenceAddressRequired(NO)
+                    .atSpecAoSApplicantCorrespondenceAddressDetails(AddressBuilder.maximal().build())
+                    .build();
+
+                CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+                when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any()))
+                    .thenReturn(LocalDateTime.now());
+
+                // When
+                AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                    .handle(params);
+
+                // Then
+                assertThat(response.getData())
+                    .extracting("responseClaimExpertSpecRequired2").isEqualTo("Yes");
+            }
+
+            @Test
+            void updateRespondent2Experts_WhenNoExperts() {
+                // Given
+                when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+                when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+                when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+
+                CaseData caseData = CaseDataBuilder.builder()
+                    .respondent1(PartyBuilder.builder().individual().build())
+                    .atStateApplicantRespondToDefenceAndProceed()
+                    .respondent2DQSmallClaimExperts(null, NO)
+                    .atSpecAoSApplicantCorrespondenceAddressRequired(NO)
+                    .atSpecAoSApplicantCorrespondenceAddressDetails(AddressBuilder.maximal().build())
+                    .build();
+
+                CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+                when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any()))
+                    .thenReturn(LocalDateTime.now());
+
+                // When
+                AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                    .handle(params);
+
+                // Then
+                assertThat(response.getData())
+                    .extracting("responseClaimExpertSpecRequired2").isEqualTo("No");
+            }
+        }
+
         @Test
         void updateRespondent2AddressWhenUpdated() {
             // Given
@@ -750,8 +967,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
             when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
             when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(true);
-
-            Address changedAddress = AddressBuilder.maximal().build();
 
             CaseData caseData = CaseDataBuilder.builder().atStateApplicantRespondToDefenceAndProceed()
                 .respondent2DQ()
@@ -765,7 +980,7 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .build();
 
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-            when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any(), any()))
+            when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any()))
                 .thenReturn(LocalDateTime.now());
 
             // When
@@ -878,7 +1093,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
         when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
         when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(true);
-        when(toggleService.isHmcEnabled()).thenReturn(true);
 
         Witnesses res1witnesses = Witnesses.builder().details(
             wrapElements(
@@ -923,7 +1137,7 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             .respondent1ResponseDate(dateTime).build();
 
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-        when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any(), any()))
+        when(deadlinesCalculator.calculateApplicantResponseDeadlineSpec(any()))
             .thenReturn(LocalDateTime.now());
 
         // When
@@ -1037,6 +1251,8 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .isEqualTo(completePreferredLocation.getCourtLocationCode());
             sent1.extracting("reasonForHearingAtSpecificCourt")
                 .isEqualTo("Reason");
+
+            verify(dqResponseDocumentUtils, times(1)).buildDefendantResponseDocuments(any(CaseData.class));
         }
 
         @Test
@@ -1084,7 +1300,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                     DefendantResponseShowTag.CAN_ANSWER_RESPONDENT_2
                 ))
                 .build();
-            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
             List<LocationRefData> locations = List.of(LocationRefData.builder().build());
             when(locationRefDataService.getCourtLocationsForDefaultJudgments(any()))
@@ -1104,10 +1319,13 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .thenReturn(true);
             UserInfo userInfo = UserInfo.builder().uid("798").build();
             when(userService.getUserInfo(anyString())).thenReturn(userInfo);
+            LocalDate whenWillPay = LocalDate.now().plusDays(5);
+            given(deadlineExtensionCalculatorService.calculateExtendedDeadline(any(), anyInt())).willReturn(whenWillPay);
+
+            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
             // When
-            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
-                .handle(params);
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
             // Then
             AbstractObjectAssert<?, ?> sent2 = assertThat(response.getData())
@@ -1122,6 +1340,8 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .isEqualTo(completePreferredLocation.getCourtLocationCode());
             sent2.extracting("reasonForHearingAtSpecificCourt")
                 .isEqualTo("Reason123");
+
+            verify(dqResponseDocumentUtils, times(1)).buildDefendantResponseDocuments(any(CaseData.class));
         }
 
         @Test
@@ -1204,7 +1424,223 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .isEqualTo(completePreferredLocation.getCourtLocationCode());
             sent2.extracting("reasonForHearingAtSpecificCourt")
                 .isEqualTo("Reason123");
+
+            verify(dqResponseDocumentUtils, times(1)).buildDefendantResponseDocuments(any(CaseData.class));
         }
+    }
+
+    @Test
+    void shouldAssignCategoryId_frc_whenInvoked() {
+        LocalDateTime responseDate = LocalDateTime.now();
+        LocalDateTime deadline = LocalDateTime.now().plusDays(4);
+        //Given
+        when(time.now()).thenReturn(LocalDateTime.of(2022, 2, 18, 12, 10, 55));
+        when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(false);
+        when(toggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
+        when(time.now()).thenReturn(responseDate);
+        when(deadlinesCalculator.calculateApplicantResponseDeadline(
+            any(LocalDateTime.class)
+        )).thenReturn(deadline);
+
+        when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+        when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+        when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+
+        CaseData caseData = CaseDataBuilder.builder()
+            .setIntermediateTrackClaim()
+            .multiPartyClaimTwoDefendantSolicitors()
+            .respondent1ClaimResponseTypeForSpec(FULL_DEFENCE)
+            .respondent2ClaimResponseTypeForSpec(FULL_DEFENCE)
+            .atStateRespondentFullDefence_1v2_BothPartiesFullDefenceResponses()
+            .respondent1DQWithFixedRecoverableCostsIntermediate()
+            .respondent2DQWithFixedRecoverableCostsIntermediate()
+            .respondent1Copy(PartyBuilder.builder().individual().build())
+            .respondent2Copy(PartyBuilder.builder().individual().build())
+            .build();
+
+        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+        //When
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+        //Then
+        assertThat(response.getData())
+            .extracting("respondent1DQFixedRecoverableCostsIntermediate")
+            .extracting("frcSupportingDocument")
+            .extracting("categoryID")
+            .isEqualTo(DQ_DEF1.getValue());
+
+        assertThat(response.getData())
+            .extracting("respondent2DQFixedRecoverableCostsIntermediate")
+            .extracting("frcSupportingDocument")
+            .extracting("categoryID")
+            .isEqualTo(DQ_DEF2.getValue());
+    }
+
+    @Test
+    void shouldAssignCategoryId_frc_whenInvokedFor1v2DiffFirstResponse() {
+        LocalDateTime responseDate = LocalDateTime.now();
+        LocalDateTime deadline = LocalDateTime.now().plusDays(4);
+        //Given
+        when(time.now()).thenReturn(LocalDateTime.of(2022, 2, 18, 12, 10, 55));
+        when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(false);
+        when(toggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
+        when(time.now()).thenReturn(responseDate);
+        when(deadlinesCalculator.calculateApplicantResponseDeadline(
+            any(LocalDateTime.class)
+        )).thenReturn(deadline);
+
+        when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+        when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+        when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+
+        CaseData caseData = CaseDataBuilder.builder()
+            .setIntermediateTrackClaim()
+            .multiPartyClaimTwoDefendantSolicitors()
+            .respondent1ClaimResponseTypeForSpec(FULL_DEFENCE)
+            .atStateRespondentFullDefence()
+            .respondent1DQWithFixedRecoverableCostsIntermediate()
+            .respondent1Copy(PartyBuilder.builder().individual().build())
+            .build();
+
+        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+        //When
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+        //Then
+        assertThat(response.getData())
+            .extracting("respondent1DQFixedRecoverableCostsIntermediate")
+            .extracting("frcSupportingDocument")
+            .extracting("categoryID")
+            .isEqualTo(DQ_DEF1.getValue());
+    }
+
+    @Test
+    void shouldPopulateDefendantResponseDocuments_whenInvokedFor1v2DiffBothResponded() {
+        LocalDateTime responseDate = LocalDateTime.now();
+        LocalDateTime deadline = LocalDateTime.now().plusDays(4);
+        //Given
+        when(time.now()).thenReturn(LocalDateTime.of(2022, 2, 18, 12, 10, 55));
+        when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(false);
+        when(toggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
+        when(time.now()).thenReturn(responseDate);
+        when(deadlinesCalculator.calculateApplicantResponseDeadline(
+            any(LocalDateTime.class)
+        )).thenReturn(deadline);
+
+        when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+        when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+        when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+        Document document = DocumentBuilder.builder().build();
+        List<Element<CaseDocument>> existingResponseDocuments = new ArrayList<>();
+        existingResponseDocuments.add(
+            Element.<CaseDocument>builder()
+                .id(UUID.randomUUID())
+                .value(CaseDocument.builder()
+                           .documentLink(document)
+                           .documentName("doc-1")
+                           .createdBy("Defendant 1")
+                           .createdDatetime(LocalDateTime.now())
+                           .build())
+                .build());
+
+        var newResponseDocuments = List.of(
+            Element.<CaseDocument>builder()
+                .id(UUID.randomUUID())
+                .value(CaseDocument.builder()
+                           .documentLink(document)
+                           .documentName("doc-2")
+                           .createdBy("Defendant 2")
+                           .createdDatetime(LocalDateTime.now())
+                           .build())
+                .build());
+
+        when(dqResponseDocumentUtils.buildDefendantResponseDocuments(any(CaseData.class))).thenReturn(newResponseDocuments);
+
+        CaseData caseData = CaseDataBuilder.builder()
+            .setIntermediateTrackClaim()
+            .multiPartyClaimTwoDefendantSolicitors()
+            .respondent1ClaimResponseTypeForSpec(FULL_DEFENCE)
+            .respondent2ClaimResponseTypeForSpec(FULL_DEFENCE)
+            .atStateRespondentFullDefence_1v2_BothPartiesFullDefenceResponses()
+            .respondent1DQWithFixedRecoverableCostsIntermediate()
+            .respondent2DQWithFixedRecoverableCostsIntermediate()
+            .respondent1Copy(PartyBuilder.builder().individual().build())
+            .respondent2Copy(PartyBuilder.builder().individual().build())
+            .build().toBuilder()
+            .defendantResponseDocuments(existingResponseDocuments)
+            .build();
+        caseData = caseData.toBuilder()
+            .respondent2DQ(caseData.getRespondent2DQ().toBuilder()
+                               .respondent2DQDraftDirections(document).build()
+            ).build();
+
+        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+        //When
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+        //Then
+        var actualCaseData = getCaseData(response);
+
+        assertThat(actualCaseData.getDefendantResponseDocuments().size()).isEqualTo(2);
+        assertThat(actualCaseData.getDefendantResponseDocuments().get(0).getValue().getDocumentName()).isEqualTo("doc-1");
+        assertThat(actualCaseData.getDefendantResponseDocuments().get(1).getValue().getDocumentName()).isEqualTo("doc-2");
+        assertThat(actualCaseData.getRespondent2DQ().getRespondent2DQDraftDirections()).isEqualTo(null);
+
+        verify(dqResponseDocumentUtils, times(1)).buildDefendantResponseDocuments(any(CaseData.class));
+    }
+
+    @Test
+    void shouldAppendDefendantResponseDocuments_whenInvokedFor1v2DiffFirstResponse() {
+        LocalDateTime responseDate = LocalDateTime.now();
+        LocalDateTime deadline = LocalDateTime.now().plusDays(4);
+        //Given
+        when(time.now()).thenReturn(LocalDateTime.of(2022, 2, 18, 12, 10, 55));
+        when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(false);
+        when(toggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
+        when(time.now()).thenReturn(responseDate);
+        when(deadlinesCalculator.calculateApplicantResponseDeadline(
+            any(LocalDateTime.class)
+        )).thenReturn(deadline);
+
+        when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+        when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+        when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+        Document document = DocumentBuilder.builder().build();
+        var expectedResponseDocuments = List.of(
+            Element.<CaseDocument>builder()
+                .id(UUID.randomUUID())
+                .value(CaseDocument.builder()
+                           .documentLink(document)
+                           .documentName("doc-name")
+                           .createdBy("Defendant")
+                           .createdDatetime(LocalDateTime.now())
+                           .build())
+                .build());
+        when(dqResponseDocumentUtils.buildDefendantResponseDocuments(any(CaseData.class))).thenReturn(expectedResponseDocuments);
+
+        CaseData caseData = CaseDataBuilder.builder()
+            .setIntermediateTrackClaim()
+            .multiPartyClaimTwoDefendantSolicitors()
+            .respondent1ClaimResponseTypeForSpec(FULL_DEFENCE)
+            .atStateRespondentFullDefence()
+            .respondent1DQWithFixedRecoverableCostsIntermediate()
+            .respondent1Copy(PartyBuilder.builder().individual().build())
+            .build();
+        caseData = caseData.toBuilder()
+            .respondent1DQ(caseData.getRespondent1DQ().toBuilder()
+                               .respondent1DQDraftDirections(document).build()
+            ).build();
+
+        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+        //When
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+        //Then
+        var actualCaseData = getCaseData(response);
+
+        assertThat(actualCaseData.getDefendantResponseDocuments().size()).isEqualTo(1);
+        assertThat(actualCaseData.getDefendantResponseDocuments().get(0).getValue().getDocumentName()).isEqualTo("doc-name");
+        assertThat(actualCaseData.getRespondent1DQ().getRespondent1DQDraftDirections()).isEqualTo(null);
+
+        verify(dqResponseDocumentUtils, times(1)).buildDefendantResponseDocuments(any(CaseData.class));
     }
 
     @Test
@@ -1214,7 +1650,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
         when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
         when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(true);
-        when(toggleService.isCaseFileViewEnabled()).thenReturn(true);
         var testDocument = ResponseDocument.builder()
             .file(Document.builder().documentUrl("fake-url").documentFileName("file-name").documentBinaryUrl(
                 "binary-url").build()).build();
@@ -1248,7 +1683,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
         when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORONE))).thenReturn(true);
         when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(false);
-        when(toggleService.isCaseFileViewEnabled()).thenReturn(true);
         var testDocument = ResponseDocument.builder()
             .file(Document.builder().documentUrl("fake-url").documentFileName("file-name").documentBinaryUrl(
                 "binary-url").build()).build();
@@ -1293,7 +1727,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
         when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORONE))).thenReturn(true);
         when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(false);
-        when(toggleService.isCaseFileViewEnabled()).thenReturn(true);
         var testDocument = ResponseDocument.builder()
             .file(Document.builder().documentUrl("fake-url").documentFileName("file-name").documentBinaryUrl(
                 "binary-url").build()).build();
@@ -1350,7 +1783,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
         when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
         when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(true);
-        when(toggleService.isCaseFileViewEnabled()).thenReturn(true);
         var testDocument = ResponseDocument.builder()
             .file(Document.builder().documentUrl("fake-url").documentFileName("file-name").documentBinaryUrl(
                 "binary-url").build()).build();
@@ -1390,7 +1822,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
     @Test
     void shouldPopulateRespondent2Flag_WhenInvoked() {
         // Given
-        when(toggleService.isCaseFileViewEnabled()).thenReturn(true);
         when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
         when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
         given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).willReturn(true);
@@ -1415,7 +1846,6 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
     @Test
     void shouldNotPopulateRespondent2Flag_WhenInvoked() {
         // Given
-        when(toggleService.isCaseFileViewEnabled()).thenReturn(true);
         when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
         when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
         given(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).willReturn(false);
@@ -1670,6 +2100,7 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             BigDecimal admitted = BigDecimal.valueOf(1000);
             LocalDate whenWillPay = LocalDate.now().plusDays(5);
             CaseData caseData = CaseDataBuilder.builder()
+                .totalClaimAmount(BigDecimal.valueOf(1000))
                 .atStateApplicantRespondToDefenceAndProceed()
                 .build().toBuilder()
                 .respondToClaimAdmitPartLRspec(RespondToClaimAdmitPartLRspec.builder()
@@ -1812,11 +2243,39 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         }
 
         @Test
+        void specificSummary_whenFullAdmitNotPaid() {
+            // Given
+            BigDecimal totalClaimAmount = BigDecimal.valueOf(1000);
+            LocalDate whenWillPay = LocalDate.now().plusDays(5);
+            CaseData caseData = CaseDataBuilder.builder()
+                .atStateApplicantRespondToDefenceAndProceed()
+                .build().toBuilder()
+                .respondentClaimResponseTypeForSpecGeneric(FULL_ADMISSION)
+                .specDefenceAdmittedRequired(YesOrNo.YES)
+                .totalClaimAmount(totalClaimAmount)
+                .respondToClaimAdmitPartLRspec(RespondToClaimAdmitPartLRspec.builder()
+                                                   .whenWillThisAmountBePaid(whenWillPay).build())
+                .defenceAdmitPartPaymentTimeRouteRequired(IMMEDIATELY)
+                .respondent1Represented(YES)
+                .applicant1Represented(NO)
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, SUBMITTED);
+
+            // When
+            SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
+
+            // Then
+            assertThat(response.getConfirmationBody())
+                .contains(caseData.getApplicant1().getPartyName())
+                .contains(caseData.getTotalClaimAmount().toString());
+        }
+
+        @Test
         void shouldReturnExpectedResponse_when1v2SameSolicitorDivergentResponseFullDefenceFullAdmission() {
             // Given
             CaseData caseData = CaseDataBuilder.builder()
                 .atState1v2SameSolicitorDivergentResponseSpec(
-                    RespondentResponseTypeSpec.FULL_DEFENCE,
+                    FULL_DEFENCE,
                     FULL_ADMISSION
                 )
                 .respondent2(PartyBuilder.builder().individual().build())
@@ -2123,6 +2582,10 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
             DynamicList locationValues = DynamicList.fromList(List.of("Value 1"));
             when(courtLocationUtils.getLocationsFromList(locations))
                 .thenReturn(locationValues);
+            when(toggleService.isCarmEnabledForCase(any())).thenReturn(true);
+
+            when(mockedStateFlow.isFlagSet(any())).thenReturn(false);
+            when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
 
             // When
             AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
@@ -2137,7 +2600,93 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .extracting("list_items").asList()
                 .extracting("label")
                 .containsExactly(locationValues.getListItems().get(0).getLabel());
+            assertThat(response.getData().get("showCarmFields")).isEqualTo("Yes");
         }
+
+        @Test
+        void shouldCheckToggleNotToShowCarmFieldsBeforePopulateCourtLocations() {
+            // Given
+            CaseData caseData = CaseData.builder()
+                .respondent1(Party.builder()
+                                 .partyName("name")
+                                 .type(Party.Type.INDIVIDUAL)
+                                 .build())
+                .build();
+            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_START);
+
+            List<LocationRefData> locations = List.of(LocationRefData.builder()
+                                                          .build());
+            when(locationRefDataService.getCourtLocationsForDefaultJudgments(any()))
+                .thenReturn(locations);
+            DynamicList locationValues = DynamicList.fromList(List.of("Value 1"));
+            when(courtLocationUtils.getLocationsFromList(locations))
+                .thenReturn(locationValues);
+            when(toggleService.isCarmEnabledForCase(any())).thenReturn(false);
+            when(mockedStateFlow.isFlagSet(any())).thenReturn(false);
+            when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            System.out.println(response.getData());
+
+            // Then
+            assertThat(response.getData())
+                .extracting("respondToCourtLocation")
+                .extracting("responseCourtLocations")
+                .extracting("list_items").asList()
+                .extracting("label")
+                .containsExactly(locationValues.getListItems().get(0).getLabel());
+            assertThat(response.getData().get("showCarmFields")).isEqualTo("No");
+        }
+
+        @Test
+        void shouldTriggerError_WhenRespondent1AlreadyRespondedAndTryToSubmitAgain() {
+            //Given
+            when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+            when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+            when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+            when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORONE))).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder()
+                .atStateClaimDetailsNotified()
+                .multiPartyClaimTwoDefendantSolicitors()
+                .respondent1ResponseDate(LocalDateTime.now())
+                .build();
+
+            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_START);
+            //When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+            //Then
+            assertThat(response.getErrors()).isNotNull();
+            assertThat(response.getErrors()).contains(
+                "There is a problem \n You have already submitted the defendant's response");
+        }
+
+        @Test
+        void shouldTriggerError_WhenRespondent2AlreadyRespondedAndTryToSubmitAgain() {
+            //Given
+            when(mockedStateFlow.isFlagSet(any())).thenReturn(true);
+            when(stateFlowEngine.evaluate(any(CaseData.class))).thenReturn(mockedStateFlow);
+            when(userService.getUserInfo(anyString())).thenReturn(UserInfo.builder().uid("uid").build());
+            when(coreCaseUserService.userHasCaseRole(any(), any(), eq(RESPONDENTSOLICITORTWO))).thenReturn(true);
+
+            CaseData caseData = CaseDataBuilder.builder()
+                .atStateClaimDetailsNotified()
+                .multiPartyClaimTwoDefendantSolicitors()
+                .respondent2ResponseDate(LocalDateTime.now())
+                .build();
+
+            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_START);
+            //When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+            //Then
+            assertThat(response.getErrors()).isNotNull();
+        }
+
     }
 
     @Nested
@@ -2218,6 +2767,325 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
     }
 
     @Nested
+    class MidValidateMediationUnavailabiltyDates {
+
+        @Test
+        public void testValidateResp2UnavailableDateWhenAvailabilityIsNo() {
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp2MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(NO).build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            // Then
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).isEmpty();
+        }
+
+        @Test
+        public void testValidateResp2UnavailableDateWhenAvailabilityIsYesAndSingleDate() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().plusDays(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().plusDays(4))
+                    .toDate(LocalDate.now().plusDays(6))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp2MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).isEmpty();
+        }
+
+        @Test
+        public void testValidateResp1UnavailableDateWhenAvailabilityIsNo() {
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(NO).build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            // Then
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).isEmpty();
+        }
+
+        @Test
+        public void testValidateResp1UnavailableDateWhenAvailabilityIsYesAndSingleDate() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().plusDays(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().plusDays(4))
+                    .toDate(LocalDate.now().plusDays(6))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).isEmpty();
+        }
+
+        @Test
+        public void testValidateResp1UnavailableDateWhenAvailabilityIsYesAndSingleDateErrored() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().minusDays(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().plusDays(4))
+                    .toDate(LocalDate.now().plusDays(6))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).contains("Unavailability Date must not be before today.");
+        }
+
+        @Test
+        public void testResp1UnavailableDateWhenAvailabilityIsYesAndSingleDateIsBeyondYear() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().plusMonths(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().plusDays(4))
+                    .toDate(LocalDate.now().plusDays(6))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).contains("Unavailability Date must not be more than three months in the future.");
+        }
+
+        @Test
+        public void testResp1UnavailableDateWhenDateToIsBeforeDateFrom() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().plusDays(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().plusDays(6))
+                    .toDate(LocalDate.now().plusDays(4))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).contains("Unavailability Date From cannot be after Unavailability Date To. Please enter valid range.");
+        }
+
+        @Test
+        public void testResp1UnavailableDateWhenDateFromIsBeforeToday() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().plusDays(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().minusDays(6))
+                    .toDate(LocalDate.now().plusDays(4))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).contains("Unavailability Date From must not be before today.");
+        }
+
+        @Test
+        public void testResp1UnavailableDateWhenDateToIsBeforeToday() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().plusDays(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().plusDays(6))
+                    .toDate(LocalDate.now().minusDays(4))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).contains("Unavailability Date From cannot be after Unavailability Date To. Please enter valid range.");
+        }
+
+        @Test
+        public void testResp1UnavailableDateWhenDateToIsBeyondOneYear() {
+
+            List<Element<UnavailableDate>> unAvailableDates = Stream.of(
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.SINGLE_DATE)
+                    .date(LocalDate.now().plusDays(4))
+                    .build(),
+                UnavailableDate.builder()
+                    .unavailableDateType(UnavailableDateType.DATE_RANGE)
+                    .fromDate(LocalDate.now().plusDays(6))
+                    .toDate(LocalDate.now().plusMonths(4))
+                    .build()
+            ).map(ElementUtils::element).toList();
+
+            CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
+                .addRespondent2(YES)
+                .respondent2(PartyBuilder.builder().individual().build())
+                .respondent2Copy(PartyBuilder.builder().individual().build())
+                .respondent2SameLegalRepresentative(NO)
+                .respondent1DQ()
+                .build();
+            CaseData updatedCaseData = caseData.toBuilder()
+                .resp1MediationAvailability(MediationAvailability.builder().isMediationUnavailablityExists(YES)
+                                                .unavailableDatesForMediation(unAvailableDates)
+                                                .build()).build();
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "validate-mediation-unavailable-dates");
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            assertThat(response).isNotNull();
+            assertThat(response.getErrors()).contains("Unavailability Date To must not be more than three months in the future.");
+        }
+
+    }
+
+    @Nested
     class MidValidateRespondentExperts {
 
         @BeforeEach
@@ -2283,7 +3151,7 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
                 UnavailableDate.builder()
                     .date(LocalDate.of(2024, 5, 2))
                     .who("who 1")
-                    .build()).map(ElementUtils::element).collect(Collectors.toList());
+                    .build()).map(ElementUtils::element).toList();
 
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDetailsNotified()
                 .responseClaimTrack(SpecJourneyConstantLRSpec.SMALL_CLAIM)
@@ -2322,8 +3190,128 @@ class RespondToClaimSpecCallbackHandlerTest extends BaseCallbackHandlerTest {
         }
     }
 
+    @Nested
+    class HideHadPaidSomeAmount {
+        @Test
+        public void hideHadPaidSomeAmountFOr1V1() {
+
+            // Given
+            CaseData caseData =
+                CaseDataBuilder.builder().atStateClaimDetailsNotified().isRespondent1(YES)
+                    .respondent1ClaimResponseTypeForSpec(
+                        FULL_ADMISSION).build();
+            CaseData updatedCaseData = caseData.toBuilder().showConditionFlags(EnumSet.of(
+                DefendantResponseShowTag.CAN_ANSWER_RESPONDENT_1
+            )).build();
+            when(toggleService.isDefendantNoCOnlineForCase(any())).thenReturn(true);
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "set-generic-response-type-flag");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            // Then
+            assertThat(response.getData()).extracting("showConditionFlags").asList()
+                .contains("WHEN_WILL_CLAIM_BE_PAID");
+            ;
+        }
+
+        @Test
+        public void hideHadPaidSomeAmountFOr1V2() {
+
+            // Given
+            CaseData caseData =
+                CaseDataBuilder.builder().atStateClaimDetailsNotified().isRespondent2(YES)
+                    .respondent2ClaimResponseTypeForSpec(
+                        FULL_ADMISSION).build();
+            CaseData updatedCaseData = caseData.toBuilder().showConditionFlags(EnumSet.of(
+                DefendantResponseShowTag.CAN_ANSWER_RESPONDENT_2
+            )).build();
+            when(toggleService.isDefendantNoCOnlineForCase(any())).thenReturn(true);
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "set-generic-response-type-flag");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            // Then
+            assertThat(response.getData()).extracting("showConditionFlags").asList()
+                .contains("WHEN_WILL_CLAIM_BE_PAID");
+            ;
+        }
+
+        @Test
+        public void hideHadPaidSomeAmountFOr1V2IfNOCFlagIsOff() {
+
+            // Given
+            CaseData caseData =
+                CaseDataBuilder.builder().atStateClaimDetailsNotified().isRespondent2(YES)
+                    .respondent2ClaimResponseTypeForSpec(
+                        FULL_ADMISSION).build();
+            CaseData updatedCaseData = caseData.toBuilder().showConditionFlags(EnumSet.of(
+                DefendantResponseShowTag.CAN_ANSWER_RESPONDENT_2
+            )).build();
+            when(toggleService.isDefendantNoCOnlineForCase(any())).thenReturn(false);
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "set-generic-response-type-flag");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            // Then
+            assertThat(response.getData()).extracting("showConditionFlags").asList()
+                .contains("SHOW_ADMITTED_AMOUNT_SCREEN");
+            ;
+        }
+
+        @Test
+        public void shouldsetspecDefenceFullAdmittedRequiredFor1V1() {
+            // Given
+            CaseData caseData =
+                CaseDataBuilder.builder().atStateClaimDetailsNotified().isRespondent1(YES)
+                    .respondent1ClaimResponseTypeForSpec(
+                        FULL_ADMISSION).build();
+            CaseData updatedCaseData = caseData.toBuilder().showConditionFlags(EnumSet.of(
+                DefendantResponseShowTag.CAN_ANSWER_RESPONDENT_1
+            )).build();
+            when(toggleService.isDefendantNoCOnlineForCase(any())).thenReturn(true);
+
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "specHandleAdmitPartClaim");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+            // Then
+            assertThat(response.getData()).extracting("specDefenceFullAdmittedRequired").isEqualTo("No");
+        }
+
+        @Test
+        public void shouldsetspecDefenceFullAdmitted2RequiredFOr1V2() {
+
+            // Given
+            CaseData caseData =
+                CaseDataBuilder.builder().atStateClaimDetailsNotified().isRespondent2(YES)
+                    .respondent2ClaimResponseTypeForSpec(
+                        FULL_ADMISSION).build();
+            CaseData updatedCaseData =
+                caseData.toBuilder().respondent2(Party.builder().type(Party.Type.INDIVIDUAL).build())
+                    .showConditionFlags(EnumSet.of(
+                        DefendantResponseShowTag.CAN_ANSWER_RESPONDENT_2
+                    )).build();
+            when(toggleService.isDefendantNoCOnlineForCase(any())).thenReturn(true);
+            CallbackParams params = callbackParamsOf(updatedCaseData, MID, "specHandleAdmitPartClaim");
+            // When
+            AboutToStartOrSubmitCallbackResponse response = (AboutToStartOrSubmitCallbackResponse) handler
+                .handle(params);
+
+            // Then
+            assertThat(response.getData()).extracting("specDefenceFullAdmitted2Required").isEqualTo("No");
+
+        }
+    }
+
     @Test
     void handleEventsReturnsTheExpectedCallbackEvents() {
         assertThat(handler.handledEvents()).containsOnly(DEFENDANT_RESPONSE_SPEC);
+    }
+
+    private CaseData getCaseData(AboutToStartOrSubmitCallbackResponse response) {
+        return objectMapper.convertValue(response.getData(), CaseData.class);
     }
 }
